--- a/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/00. ComputerScience.md
+++ b/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/00. ComputerScience.md
@@ -1,15 +1,15 @@
-[[01-0. 컴퓨터 구조 시작하기]]
-[[02-0. 데이터]]
-[[03-0. 명령어]]
-[[04-0. CPU의 작동 원리]]
-[[05-0. CPU 성능 향상 기법]]
-[[06-0. 메모리와 캐시 메모리]]
-[[07-0. 보조기억장치]]
-[[08-0. 입출력장치]]
-[[09-0. 운영체제 시작하기]]
-[[10-0. 프로세스와 스레드]]
-[[11-0. CPU 스케줄링]]
-[[12-0. 프로세스 동기화]]
-[[13-0. 교착 상태]]
-[[14-0. 가상 메모리]]
-[[15-0. 파일 시스템]]
+[01-0. 컴퓨터 구조 시작하기](01.%20컴퓨터%20구조%20시작하기/01-0.%20컴퓨터%20구조%20시작하기.md)  
+[02-0. 데이터](02.%20데이터/02-0.%20데이터.md)  
+[03-0. 명령어](03.%20명령어/03-0.%20명령어.md)  
+[04-0. CPU의 작동 원리](04.%20CPU의%20작동%20원리/04-0.%20CPU의%20작동%20원리.md)  
+[05-0. CPU 성능 향상 기법](05.%20CPU%20성능%20향상%20기법/05-0.%20CPU%20성능%20향상%20기법.md)  
+[06-0. 메모리와 캐시 메모리](06.%20메모리와%20캐시%20메모리/06-0.%20메모리와%20캐시%20메모리.md)  
+[07-0. 보조기억장치](07.%20보조기억장치/07-0.%20보조기억장치.md)  
+[08-0. 입출력장치](08.%20입출력장치/08-0.%20입출력장치.md)  
+[09-0. 운영체제 시작하기](09.%20운영체제%20시작하기/09-0.%20운영체제%20시작하기.md)  
+[10-0. 프로세스와 스레드](10.%20프로세스와%20스레드/10-0.%20프로세스와%20스레드.md)  
+[11-0. CPU 스케줄링](11.%20CPU%20스케줄링/11-0.%20CPU%20스케줄링.md)  
+[12-0. 프로세스 동기화](12.%20프로세스%20동기화/12-0.%20프로세스%20동기화.md)  
+[13-0. 교착 상태](13.%20교착%20상태/13-0.%20교착%20상태.md)  
+[14-0. 가상 메모리](14.%20가상%20메모리/14-0.%20가상%20메모리.md)  
+[15-0. 파일 시스템](15.%20파일%20시스템/15-0.%20파일%20시스템.md)
