--- a/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/02. 데이터/02-0. 데이터.md
+++ b/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/02. 데이터/02-0. 데이터.md
@@ -1,4 +1,4 @@
-[[02-1. 정보단위]]
-[[02-2. 이진법]]
-[[02-3. 십육진법]]
-[[02-4 문자표현]]
+[02-1. 정보단위](02-1.%20정보단위.md)  
+[02-2. 이진법](02-2.%20이진법.md)  
+[02-3. 십육진법](02-3.%20십육진법.md)  
+[02-4 문자표현](02-4%20문자표현.md)  
