--- a/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/05. CPU 성능 향상 기법/05-0. CPU 성능 향상 기법.md
+++ b/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/05. CPU 성능 향상 기법/05-0. CPU 성능 향상 기법.md
@@ -1,9 +1,9 @@
-[[05-1. 빠른 CPU를 위한 설계 기법-1]]
-[[05-1. 빠른 CPU를 위한 설계 기법-2]]
-[[05-1. 빠른 CPU를 위한 설계 기법-3]]
-[[05-2. 명령어 병렬 처리 기법-1]]
-[[05-2. 명령어 병렬 처리 기법-2]]
-[[05-2. 명령어 병렬 처리 기법-3]]
-[[05-3. CISC와 RISC-1]]
-[[05-3. CISC와 RISC-2]]
-[[05-3. CISC와 RISC-3]]
+[05-1. 빠른 CPU를 위한 설계 기법-1](05-1.%20빠른%20CPU를%20위한%20설계%20기법-1.md)  
+[05-1. 빠른 CPU를 위한 설계 기법-2](05-1.%20빠른%20CPU를%20위한%20설계%20기법-2.md)  
+[05-1. 빠른 CPU를 위한 설계 기법-3](05-1.%20빠른%20CPU를%20위한%20설계%20기법-3.md)  
+[05-2. 명령어 병렬 처리 기법-1](05-2.%20명령어%20병렬%20처리%20기법-1.md)  
+[05-2. 명령어 병렬 처리 기법-2](05-2.%20명령어%20병렬%20처리%20기법-2.md)  
+[05-2. 명령어 병렬 처리 기법-3](05-2.%20명령어%20병렬%20처리%20기법-3.md)  
+[05-3. CISC와 RISC-1](05-3.%20CISC와%20RISC-1.md)  
+[05-3. CISC와 RISC-2](05-3.%20CISC와%20RISC-2.md)  
+[05-3. CISC와 RISC-3](05-3.%20CISC와%20RISC-3.md)
