--- a/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/06. 메모리와 캐시 메모리/06-0. 메모리와 캐시 메모리.md
+++ b/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/06. 메모리와 캐시 메모리/06-0. 메모리와 캐시 메모리.md
@@ -1,8 +1,8 @@
-[[06-1. RAM의 특징과 종류-1]]
-[[06-1. RAM의 특징과 종류-2]]
-[[06-1. RAM의 특징과 종류-3]]
-[[06-2. 메모리의 주소 공간-1]]
-[[06-2. 메모리의 주소 공간-2]]
-[[06-3. 캐시 메모리-1]]
-[[06-3. 캐시 메모리-2]]
-[[06-3. 캐시 메모리-3]]
+[06-1. RAM의 특징과 종류-1](06-1.%20RAM의%20특징과%20종류-1.md)  
+[06-1. RAM의 특징과 종류-2](06-1.%20RAM의%20특징과%20종류-2.md)  
+[06-1. RAM의 특징과 종류-3](06-1.%20RAM의%20특징과%20종류-3.md)  
+[06-2. 메모리의 주소 공간-1](06-2.%20메모리의%20주소%20공간-1.md)  
+[06-2. 메모리의 주소 공간-2](06-2.%20메모리의%20주소%20공간-2.md)  
+[06-3. 캐시 메모리-1](06-3.%20캐시%20메모리-1.md)  
+[06-3. 캐시 메모리-2](06-3.%20캐시%20메모리-2.md)  
+[06-3. 캐시 메모리-3](06-3.%20캐시%20메모리-3.md)  
