--- a/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/07. 보조기억장치/07-0. 보조기억장치.md
+++ b/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/07. 보조기억장치/07-0. 보조기억장치.md
@@ -1,4 +1,4 @@
-[[07-1. 다양한 보조기억장치-1]]
-[[07-1. 다양한 보조기억장치-2]]
-[[07-2. RAID의 정의와 종류-1]]
-[[07-2. RAID의 정의와 종류-2]]
+[07-1. 다양한 보조기억장치-1](07-1.%20다양한%20보조기억장치-1.md)  
+[07-1. 다양한 보조기억장치-2](07-1.%20다양한%20보조기억장치-2.md)  
+[07-2. RAID의 정의와 종류-1](07-2.%20RAID의%20정의와%20종류-1.md)  
+[07-2. RAID의 정의와 종류-2](07-2.%20RAID의%20정의와%20종류-2.md)  
