--- a/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/08. 입출력장치/08-0. 입출력장치.md
+++ b/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/08. 입출력장치/08-0. 입출력장치.md
@@ -1,5 +1,5 @@
-[[08-1. 장치 컨트롤러와 장치 드라이버-1]]
-[[08-1. 장치 컨트롤러와 장치 드라이버-2]]
-[[08-2. 다양한 입출력 방법-1]]
-[[08-2. 다양한 입출력 방법-2]]
-[[08-2. 다양한 입출력 방법-3]]
+[08-1. 장치 컨트롤러와 장치 드라이버-1](08-1.%20장치%20컨트롤러와%20장치%20드라이버-1.md)  
+[08-1. 장치 컨트롤러와 장치 드라이버-2](08-1.%20장치%20컨트롤러와%20장치%20드라이버-2.md)  
+[08-2. 다양한 입출력 방법-1](08-2.%20다양한%20입출력%20방법-1.md)  
+[08-2. 다양한 입출력 방법-2](08-2.%20다양한%20입출력%20방법-2.md)  
+[08-2. 다양한 입출력 방법-3](08-2.%20다양한%20입출력%20방법-3.md)  
