--- a/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/09. 운영체제 시작하기/09-0. 운영체제 시작하기.md
+++ b/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/09. 운영체제 시작하기/09-0. 운영체제 시작하기.md
@@ -1,6 +1,6 @@
-[[09-1. 운영체제를 알아야 하는 이유-1]]
-[[09-2. 운영체제를 알아야 하는 이유-2]]
-[[09-3. 운영체제의 큰 그림-1]]
-[[09-4. 운영체제의 큰 그림-2]]
-[[09-5. 운영체제의 큰 그림-3]]
-[[09-6. 운영체제의 큰 그림-4]]
+[09-1. 운영체제를 알아야 하는 이유-1](09-1.%20운영체제를%20알아야%20하는%20이유-1.md)  
+[09-2. 운영체제를 알아야 하는 이유-2](09-2.%20운영체제를%20알아야%20하는%20이유-2.md)  
+[09-3. 운영체제의 큰 그림-1](09-3.%20운영체제의%20큰%20그림-1.md)  
+[09-4. 운영체제의 큰 그림-2](09-4.%20운영체제의%20큰%20그림-2.md)  
+[09-5. 운영체제의 큰 그림-3](09-5.%20운영체제의%20큰%20그림-3.md)  
+[09-6. 운영체제의 큰 그림-4](09-6.%20운영체제의%20큰%20그림-4.md)  
