--- a/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/13. 교착 상태/13-0. 교착 상태.md
+++ b/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/13. 교착 상태/13-0. 교착 상태.md
@@ -1,6 +1,6 @@
-[[13-1. 교착 상태란-1]]
-[[13-2. 교착 상태란-2]]
-[[13-3. 교착 상태란-3]]
-[[13-4. 교착 상태 해결 방법-1]]
-[[13-5. 교착 상태 해결 방법-2]]
-[[13-6. 교착 상태 해결 방법-3]]
+[13-1. 교착 상태란-1](13-1.%20교착%20상태란-1.md)  
+[13-2. 교착 상태란-2](13-2.%20교착%20상태란-2.md)  
+[13-3. 교착 상태란-3](13-3.%20교착%20상태란-3.md)  
+[13-4. 교착 상태 해결 방법-1](13-4.%20교착%20상태%20해결%20방법-1.md)  
+[13-5. 교착 상태 해결 방법-2](13-5.%20교착%20상태%20해결%20방법-2.md)  
+[13-6. 교착 상태 해결 방법-3](13-6.%20교착%20상태%20해결%20방법-3.md)  
