--- a/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/15. 파일 시스템/15-0. 파일 시스템.md
+++ b/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/15. 파일 시스템/15-0. 파일 시스템.md
@@ -1,9 +1,9 @@
-[[15-1. 파일과 디렉터리-1]]
-[[15-2. 파일과 디렉터리-2]]
-[[15-3. 파일과 디렉터리-3]]
-[[15-4. 파일 시스템-1]]
-[[15-5. 파일 시스템-2]]
-[[15-6. 파일 시스템-3]]
-[[15-7. 파일 시스템-4]]
-[[15-8. 파일 시스템-5]]
-[[15-9. 파일 시스템-6]]
+[15-1. 파일과 디렉터리-1](15-1.%20파일과%20디렉터리-1.md)  
+[15-2. 파일과 디렉터리-2](15-2.%20파일과%20디렉터리-2.md)  
+[15-3. 파일과 디렉터리-3](15-3.%20파일과%20디렉터리-3.md)  
+[15-4. 파일 시스템-1](15-4.%20파일%20시스템-1.md)  
+[15-5. 파일 시스템-2](15-5.%20파일%20시스템-2.md)  
+[15-6. 파일 시스템-3](15-6.%20파일%20시스템-3.md)  
+[15-7. 파일 시스템-4](15-7.%20파일%20시스템-4.md)  
+[15-8. 파일 시스템-5](15-8.%20파일%20시스템-5.md)  
+[15-9. 파일 시스템-6](15-9.%20파일%20시스템-6.md)  
