--- a/독서/3. 모던 자바스크립트 deep dive/01. 프로그래밍/01-0. 프로그래밍.md
+++ b/독서/3. 모던 자바스크립트 deep dive/01. 프로그래밍/01-0. 프로그래밍.md
@@ -1,3 +1,3 @@
-[[01-1. 프로그래밍이란?]]
-[[01-2. 프로그래밍 언어]]
-[[01-3. 구문과 의미]]
+[01-1. 프로그래밍이란?](01-1.%20프로그래밍이란%3F.md)  
+[01-2. 프로그래밍 언어](01-2.%20프로그래밍%20언어.md)  
+[01-3. 구문과 의미](01-3.%20구문과%20의미.md)  
