--- a/독서/3. 모던 자바스크립트 deep dive/02. 자바스크립트란/02-0. 자바스크립트란.md
+++ b/독서/3. 모던 자바스크립트 deep dive/02. 자바스크립트란/02-0. 자바스크립트란.md
@@ -1,6 +1,6 @@
-[[02-1. 자바스크립트의 탄생]]
-[[02-2. 자바스크립트의 표준화]]
-[[02-3. 자바스크립트 성장의 역사]]
-[[02-4. 자바스크립트와 ECMAScript]]
-[[02-5. 자바스크립트의 특징]]
-[[02-6. ES6 브라우저 지원 현황]]
+[02-1. 자바스크립트의 탄생](02-1.%20자바스크립트의%20탄생.md)  
+[02-2. 자바스크립트의 표준화](02-2.%20자바스크립트의%20표준화.md)  
+[02-3. 자바스크립트 성장의 역사](02-3.%20자바스크립트%20성장의%20역사.md)  
+[02-4. 자바스크립트와 ECMAScript](02-4.%20자바스크립트와%20ECMAScript.md)  
+[02-5. 자바스크립트의 특징](02-5.%20자바스크립트의%20특징.md)  
+[02-6. ES6 브라우저 지원 현황](02-6.%20ES6%20브라우저%20지원%20현황.md)  
