--- a/독서/3. 모던 자바스크립트 deep dive/04. 변수/04-0. 변수.md
+++ b/독서/3. 모던 자바스크립트 deep dive/04. 변수/04-0. 변수.md
@@ -1,7 +1,7 @@
-[[04-1. 변수란 무엇인가? 왜 필요한가?]]
-[[04-2. 식별자]]
-[[04-3. 변수 선언]]
-[[04-4. 변수 선언의 실행 시점과 변수 호이스팅]]
-[[04-5. 값의 할당]]
-[[04-6. 값의 재할당]]
-[[04-7. 식별자 네이밍 규칙]]
+[04-1. 변수란 무엇인가? 왜 필요한가?](04-1.%20변수란%20무엇인가%3F%20왜%20필요한가%3F.md)  
+[04-2. 식별자](04-2.%20식별자.md)  
+[04-3. 변수 선언](04-3.%20변수%20선언.md)  
+[04-4. 변수 선언의 실행 시점과 변수 호이스팅](04-4.%20변수%20선언의%20실행%20시점과%20변수%20호이스팅.md)  
+[04-5. 값의 할당](04-5.%20값의%20할당.md)  
+[04-6. 값의 재할당](04-6.%20값의%20재할당.md)  
+[04-7. 식별자 네이밍 규칙](04-7.%20식별자%20네이밍%20규칙.md)  
