--- a/독서/3. 모던 자바스크립트 deep dive/05. 표현식과 문/05-0. 표현식과 문.md
+++ b/독서/3. 모던 자바스크립트 deep dive/05. 표현식과 문/05-0. 표현식과 문.md
@@ -1,6 +1,6 @@
-[[05-1. 값]]
-[[05-2. 리터럴]]
-[[05-3. 표현식]]
-[[05-4. 문]]
-[[05-5️. 세미콜론과 세미콜론 자동 삽입 기능]]
-[[05-6. 표현식인 문과 표현식이 아닌 문]]
+[05-1. 값](05-1.%20값.md)  
+[05-2. 리터럴](05-2.%20리터럴.md)  
+[05-3. 표현식](05-3.%20표현식.md)  
+[05-4. 문](05-4.%20문.md)  
+[05-5️. 세미콜론과 세미콜론 자동 삽입 기능](05-5️.%20세미콜론과%20세미콜론%20자동%20삽입%20기능.md)  
+[05-6. 표현식인 문과 표현식이 아닌 문](05-6.%20표현식인%20문과%20표현식이%20아닌%20문.md)  
