--- a/독서/3. 모던 자바스크립트 deep dive/06. 데이터 타입/06-0. 데이터 타입.md
+++ b/독서/3. 모던 자바스크립트 deep dive/06. 데이터 타입/06-0. 데이터 타입.md
@@ -1,10 +1,10 @@
-[[06-1. 숫자 타입]]
-[[06-2. 문자열 타입]]
-[[06-3. 템플릿 리터럴]]
-[[06-4. 불리언 타입]]
-[[06-5. undefined 타입]]
-[[06-6. null 타입]]
-[[06-7. 심벌 타입]]
-[[06-8. 객체 타입]]
-[[06-9. 데이터 타입의 필요성]]
-[[06-10. 동적 타이핑]]
+[06-1. 숫자 타입](06-1.%20숫자%20타입.md)  
+[06-2. 문자열 타입](06-2.%20문자열%20타입.md)  
+[06-3. 템플릿 리터럴](06-3.%20템플릿%20리터럴.md)  
+[06-4. 불리언 타입](06-4.%20불리언%20타입.md)  
+[06-5. undefined 타입](06-5.%20undefined%20타입.md)  
+[06-6. null 타입](06-6.%20null%20타입.md)  
+[06-7. 심벌 타입](06-7.%20심벌%20타입.md)  
+[06-8. 객체 타입](06-8.%20객체%20타입.md)  
+[06-9. 데이터 타입의 필요성](06-9.%20데이터%20타입의%20필요성.md)  
+[06-10. 동적 타이핑](06-10.%20동적%20타이핑.md)  
