--- a/독서/3. 모던 자바스크립트 deep dive/07. 연산자/07-0. 연산자.md
+++ b/독서/3. 모던 자바스크립트 deep dive/07. 연산자/07-0. 연산자.md
@@ -1,9 +1,9 @@
-[[07-1. 산술 연산자]]
-[[07-2. 할당 연산자]]
-[[07-3. 비교 연산자]]
-[[07-4. 삼항 조건 연산자]]
-[[07-5. 논리 연산자]]
-[[07-6. 쉼표 연산자]]
-[[07-7. 그룹 연산자]]
-[[07-8. typeof 연산자]]
-[[07-9. 지수 연산자]]
+[07-1. 산술 연산자](07-1.%20산술%20연산자.md)  
+[07-2. 할당 연산자](07-2.%20할당%20연산자.md)  
+[07-3. 비교 연산자](07-3.%20비교%20연산자.md)  
+[07-4. 삼항 조건 연산자](07-4.%20삼항%20조건%20연산자.md)  
+[07-5. 논리 연산자](07-5.%20논리%20연산자.md)  
+[07-6. 쉼표 연산자](07-6.%20쉼표%20연산자.md)  
+[07-7. 그룹 연산자](07-7.%20그룹%20연산자.md)  
+[07-8. typeof 연산자](07-8.%20typeof%20연산자.md)  
+[07-9. 지수 연산자](07-9.%20지수%20연산자.md)  
