--- a/독서/3. 모던 자바스크립트 deep dive/42. 비동기 프로그래밍/42-0. 비동기 프로그래밍.md
+++ b/독서/3. 모던 자바스크립트 deep dive/42. 비동기 프로그래밍/42-0. 비동기 프로그래밍.md
@@ -1,2 +1,2 @@
-[[42-1. 동기 처리와 비동기 처리]]
-[[42-2. 이벤트 루프와 태스크 큐]]
+[42-1. 동기 처리와 비동기 처리](42-1.%20동기%20처리와%20비동기%20처리.md)  
+[42-2. 이벤트 루프와 태스크 큐](42-2.%20이벤트%20루프와%20태스크%20큐.md)  
