--- a/독서/4. 프로그래머의 길 멘토에게 묻다/00. 목차.md
+++ b/독서/4. 프로그래머의 길 멘토에게 묻다/00. 목차.md
@@ -1,7 +1,7 @@
-[[01-0. 1장 들어가는 글]]
-[[02-0. 2장 잔을 비우다]]
-[[03-0. 3장 긴 여정을 걷다]]
-[[04-0. 정확한 자기 평가]]
-[[05-0. 끊임없는 학습]]
-[[06-0. 학습 과정의 구성]]
-[[07-0. 맺는 글]]
+[01-0. 1장 들어가는 글](01.%201장%20들어가는%20글/01-0.%201장%20들어가는%20글.md)  
+[02-0. 2장 잔을 비우다](02.%202장%20잔을%20비우다/02-0.%202장%20잔을%20비우다.md)  
+[03-0. 3장 긴 여정을 걷다](03.%203장%20긴%20여정을%20걷다/03-0.%203장%20긴%20여정을%20걷다.md)  
+[04-0. 정확한 자기 평가](04.%204장%20정확한%20자기%20평가/04-0.%20정확한%20자기%20평가.md)  
+[05-0. 끊임없는 학습](05.%205장%20끊임없는%20학습/05-0.%20끊임없는%20학습.md)  
+[06-0. 학습 과정의 구성](06.%206장%20학습%20과정의%20구성/06-0.%20학습%20과정의%20구성.md)  
+[07-0. 맺는 글](07.%207장%20맺는%20글/07-0.%20맺는%20글.md)  
