--- a/독서/4. 프로그래머의 길 멘토에게 묻다/01. 1장 들어가는 글/01-0. 1장 들어가는 글.md
+++ b/독서/4. 프로그래머의 길 멘토에게 묻다/01. 1장 들어가는 글/01-0. 1장 들어가는 글.md
@@ -1,5 +1,5 @@
-[[01-1. 소프트웨어 장인정신이란 무엇인가?]]
-[[01-2. 견습과정이란 무엇인가?]]
-[[01-3. 견습과정 패턴이란 무엇인가?]]
-[[01-4. 패턴들은 어디서 비롯되었는가?]]
-[[01-5. 여기서 이제 어디로 가는가?]]
+[01-1. 소프트웨어 장인정신이란 무엇인가?](01-1.%20소프트웨어%20장인정신이란%20무엇인가%3F.md)  
+[01-2. 견습과정이란 무엇인가?](01-2.%20견습과정이란%20무엇인가%3F.md)  
+[01-3. 견습과정 패턴이란 무엇인가?](01-3.%20견습과정%20패턴이란%20무엇인가%3F.md)  
+[01-4. 패턴들은 어디서 비롯되었는가?](01-4.%20패턴들은%20어디서%20비롯되었는가%3F.md)  
+[01-5. 여기서 이제 어디로 가는가?](01-5.%20여기서%20이제%20어디로%20가는가%3F.md)  
