--- a/독서/4. 프로그래머의 길 멘토에게 묻다/02. 2장 잔을 비우다/02-0. 2장 잔을 비우다.md
+++ b/독서/4. 프로그래머의 길 멘토에게 묻다/02. 2장 잔을 비우다/02-0. 2장 잔을 비우다.md
@@ -1,9 +1,9 @@
-[[02-1. 첫 번째 언어]]
-[[02-2. 흰 띠를 매라]]
-[[02-3. 열정을 드러내라]]
-[[02-4. 구체적인 기술]]
-[[02-5. 무지를 드러내라]]
-[[02-6. 무지에 맞서라]]
-[[02-7. 깊은 쪽]]
-[[02-8. 한발 물러서라]]
-[[02-9. 장을 마치며]]
+[02-1. 첫 번째 언어](02-1.%20첫%20번째%20언어.md)  
+[02-2. 흰 띠를 매라](02-2.%20흰%20띠를%20매라.md)  
+[02-3. 열정을 드러내라](02-3.%20열정을%20드러내라.md)  
+[02-4. 구체적인 기술](02-4.%20구체적인%20기술.md)  
+[02-5. 무지를 드러내라](02-5.%20무지를%20드러내라.md)  
+[02-6. 무지에 맞서라](02-6.%20무지에%20맞서라.md)  
+[02-7. 깊은 쪽](02-7.%20깊은%20쪽.md)  
+[02-8. 한발 물러서라](02-8.%20한발%20물러서라.md)  
+[02-9. 장을 마치며](02-9.%20장을%20마치며.md)  
