--- a/독서/4. 프로그래머의 길 멘토에게 묻다/03. 3장 긴 여정을 걷다/03-0. 3장 긴 여정을 걷다.md
+++ b/독서/4. 프로그래머의 길 멘토에게 묻다/03. 3장 긴 여정을 걷다/03-0. 3장 긴 여정을 걷다.md
@@ -1,9 +1,9 @@
-[[03-1. 긴 여정]]
-[[03-2. 예술보다 기예]]
-[[03-3. 지속적인 동기 부여]]
-[[03-4. 열정을 키워라]]
-[[03-5. 자신만의 지도를 그려라]]
-[[03-6. 직위를 지표로 이용하라]]
-[[03-7. 전장에 머물러라]]
-[[03-8. 또 다른 길]]
-[[03-9. 장을 마치며]]
+[03-1. 긴 여정](03-1.%20긴%20여정.md)  
+[03-2. 예술보다 기예](03-2.%20예술보다%20기예.md)  
+[03-3. 지속적인 동기 부여](03-3.%20지속적인%20동기%20부여.md)  
+[03-4. 열정을 키워라](03-4.%20열정을%20키워라.md)  
+[03-5. 자신만의 지도를 그려라](03-5.%20자신만의%20지도를%20그려라.md)  
+[03-6. 직위를 지표로 이용하라](03-6.%20직위를%20지표로%20이용하라.md)  
+[03-7. 전장에 머물러라](03-7.%20전장에%20머물러라.md)  
+[03-8. 또 다른 길](03-8.%20또%20다른%20길.md)  
+[03-9. 장을 마치며](03-9.%20장을%20마치며.md)  
