--- a/독서/4. 프로그래머의 길 멘토에게 묻다/04. 4장 정확한 자기 평가/04-0. 정확한 자기 평가.md
+++ b/독서/4. 프로그래머의 길 멘토에게 묻다/04. 4장 정확한 자기 평가/04-0. 정확한 자기 평가.md
@@ -1,6 +1,6 @@
-[[04-1. 가장 뒤떨어진 이가 되라]]
-[[04-2. 멘토를 찾아라]]
-[[04-3. 마음 맞는 사람들]]
-[[04-4. 팔꿈치를 맞대고]]
-[[04-5. 바닥을 쓸어라]]
-[[04-6. 장을 마치며]]]
+[04-1. 가장 뒤떨어진 이가 되라](04-1.%20가장%20뒤떨어진%20이가%20되라.md)  
+[04-2. 멘토를 찾아라](04-2.%20멘토를%20찾아라.md)  
+[04-3. 마음 맞는 사람들](04-3.%20마음%20맞는%20사람들.md)  
+[04-4. 팔꿈치를 맞대고](04-4.%20팔꿈치를%20맞대고.md)  
+[04-5. 바닥을 쓸어라](04-5.%20바닥을%20쓸어라.md)  
+[04-6. 장을 마치며](04-6.%20장을%20마치며.md)  
