--- a/독서/4. 프로그래머의 길 멘토에게 묻다/05. 5장 끊임없는 학습/05-0. 끊임없는 학습.md
+++ b/독서/4. 프로그래머의 길 멘토에게 묻다/05. 5장 끊임없는 학습/05-0. 끊임없는 학습.md
@@ -1,9 +1,9 @@
-[[05-1. 능력의 폭을 넓혀라]]
-[[05-2. 연습, 연습, 또 연습]]
-[[05-3. 부숴도 괜찮은 장난감]]
-[[05-4. 소스를 활용하라]]
-[[05-5. 일하면서 성찰하라]]
-[[05-6. 배운 것을 기록하라]]
-[[05-7. 피드백 루프를 만들어라]]
-[[05-8. 실패하는 법을 배워라]]
-[[05-9. 장을 마치며]]
+[05-1. 능력의 폭을 넓혀라](05-1.%20능력의%20폭을%20넓혀라.md)  
+[05-2. 연습, 연습, 또 연습](05-2.%20연습,%20연습,%20또%20연습.md)  
+[05-3. 부숴도 괜찮은 장난감](05-3.%20부숴도%20괜찮은%20장난감.md)  
+[05-4. 소스를 활용하라](05-4.%20소스를%20활용하라.md)  
+[05-5. 일하면서 성찰하라](05-5.%20일하면서%20성찰하라.md)  
+[05-6. 배운 것을 기록하라](05-6.%20배운%20것을%20기록하라.md)  
+[05-7. 피드백 루프를 만들어라](05-7.%20피드백%20루프를%20만들어라.md)  
+[05-8. 실패하는 법을 배워라](05-8.%20실패하는%20법을%20배워라.md)  
+[05-9. 장을 마치며](05-9.%20장을%20마치며.md)  
