--- a/독서/4. 프로그래머의 길 멘토에게 묻다/06. 6장 학습 과정의 구성/06-0. 학습 과정의 구성.md
+++ b/독서/4. 프로그래머의 길 멘토에게 묻다/06. 6장 학습 과정의 구성/06-0. 학습 과정의 구성.md
@@ -1,6 +1,6 @@
-[[06-1. 독서 목록]]
-[[06-2. 꾸준히 읽어라]]
-[[06-3. 고전을 공부하라]]
-[[06-4. 더 깊이 파고들어라]]
-[[06-5. 익숙한 도구들]]
-[[06-6. 장을 마치며]]
+[06-1. 독서 목록](06-1.%20독서%20목록.md)  
+[06-2. 꾸준히 읽어라](06-2.%20꾸준히%20읽어라.md)  
+[06-3. 고전을 공부하라](06-3.%20고전을%20공부하라.md)  
+[06-4. 더 깊이 파고들어라](06-4.%20더%20깊이%20파고들어라.md)  
+[06-5. 익숙한 도구들](06-5.%20익숙한%20도구들.md)  
+[06-6. 장을 마치며](06-6.%20장을%20마치며.md)  
