--- a/독서/4. 프로그래머의 길 멘토에게 묻다/07. 7장 맺는 글/07-0. 맺는 글.md
+++ b/독서/4. 프로그래머의 길 멘토에게 묻다/07. 7장 맺는 글/07-0. 맺는 글.md
@@ -1,45 +1,143 @@
-> 장인들은 원숙해지는 솜씨에 가장 자부심을 느낀다. 단순한 모방이 지속적인 만족을 줄 수 없는 것은 이런 이유 때문이다. 기술은 점차 발전해 가야만 한다. - 리처드 세넷
+> 장인들은 원숙해지는 솜씨에 가장 자부심을 느낀다. 단순한 모방이 지속적인 만족을 줄 수 없는 것은 이런
+> 이유 때문이다. 기술은 점차 발전해 가야만 한다. - 리처드 세넷
 
-이 책을 쓰기 시작했을 때, 우리는 단지 장인이 되려는 포부를 품은 견습생들에게 조언을 해주고 싶었다. 그러나 장인정신 개념에 의한 접근법에는 기회뿐 아니라 한계 또한 존재한다.
+이 책을 쓰기 시작했을 때, 우리는 단지 장인이 되려는 포부를 품은 견습생들에게 조언을 해주고 싶었다.
+그러나 장인정신 개념에 의한 접근법에는 기회뿐 아니라 한계 또한 존재한다.
 
-17, 18세기 안토니오 스트라디바리의 공방에서 제작된 바이올린과 첼로는 지금껏 만들어진 것 중 최고의 악기로 불린다. 그 악기들은 보통 수백만 달러에 거래되며, 지난 300년간 그것을 재생산하려는 시도들이 숱하게 있어 왔다. 하지만 "The Craftsman" 에 다음과 같은 말이 있다.
+17, 18세기 안토니오 스트라디바리의 공방에서 제작된 바이올린과 첼로는 지금껏 만들어진 것 중 최고의
+악기로 불린다. 그 악기들은 보통 수백만 달러에 거래되며, 지난 300년간 그것을 재생산하려는 시도들이
+숱하게 있어 왔다. 하지만 "The Craftsman" 에 다음과 같은 말이 있다.
 
-"안토니오 스트라디바리나 과르넬리 델 제수 같은 거장들의 비밀은 사실 그들과 함께 죽은 것이다. 산더미 같은 돈과 끝없이 이어진 실험도 이런 거장들의 비밀을 밝혀내는 데 실패했다. 이 공방들의 특성 중 무엇인가가 그 지식이 전달되지 못하도록 막았음에 틀림없다."
+"안토니오 스트라디바리나 과르넬리 델 제수 같은 거장들의 비밀은 사실 그들과 함께 죽은 것이다. 산더미 같은
+돈과 끝없이 이어진 실험도 이런 거장들의 비밀을 밝혀내는 데 실패했다. 이 공방들의 특성 중 무엇인가가 그
+지식이 전달되지 못하도록 막았음에 틀림없다."
 
-스트라디바리가 나이를 먹어 일상 생활에서 견습생들만큼 활동적이지 못하게 되면서 그의 공방에서 나온 악기들의 질은 떨어졌다. 공방이 '개인의 특출한 재능을 중심으로 돌아갔고', 스트라디바리가 자신의 천재성을 견습생들에게 전하지 못했기 때문에, 공방은 그와 함께 죽음을 맞이했다.
+스트라디바리가 나이를 먹어 일상 생활에서 견습생들만큼 활동적이지 못하게 되면서 그의 공방에서 나온 악기들의
+질은 떨어졌다. 공방이 '개인의 특출한 재능을 중심으로 돌아갔고', 스트라디바리가 자신의 천재성을
+견습생들에게 전하지 못했기 때문에, 공방은 그와 함께 죽음을 맞이했다.
 
-스트라디바리의 견습생 중에는 두 아들도 있었는데, 그가 아들들에게 뭔가를 숨겨서 이득을 얻을 일은 없었다. 우리가 아는 한 그는 아들들에게 자신이 아는 모든 것을 가르쳤다. 또는 그들이 알아야 할 모든 중요한 것을 가르쳤다고 할 수도 있겠다. 하지만 그가 신경조차 쓰지 않았던 그 모든 암묵적인 지식의 조각들이 실제로 그가 가진 기술의 일부를 이루고 있었기에, 결과적으로 그는 전수에 실패하고 말았다. 당시에는 중요한 것 같지 않아서 기록해 두지 않았던 모든 미묘한 연관성과, 견습생과 함께 사소해 보이는 작업을 할 때마다 적용했던 그 모든 암묵적인 지식 속에 공방의 몰락은 이미 내재되어 있었던 것이다.
+스트라디바리의 견습생 중에는 두 아들도 있었는데, 그가 아들들에게 뭔가를 숨겨서 이득을 얻을 일은 없었다.
+우리가 아는 한 그는 아들들에게 자신이 아는 모든 것을 가르쳤다. 또는 그들이 알아야 할 모든 중요한 것을
+가르쳤다고 할 수도 있겠다. 하지만 그가 신경조차 쓰지 않았던 그 모든 암묵적인 지식의 조각들이 실제로 그가
+가진 기술의 일부를 이루고 있었기에, 결과적으로 그는 전수에 실패하고 말았다. 당시에는 중요한 것 같지
+않아서 기록해 두지 않았던 모든 미묘한 연관성과, 견습생과 함께 사소해 보이는 작업을 할 때마다 적용했던 그
+모든 암묵적인 지식 속에 공방의 몰락은 이미 내재되어 있었던 것이다.
 
-스트라디바리는 그의 지식을 충분히 나누지 않았고, 고객들이 학생들의 작업에 대해서도 그 자신과 같은 기대 수준을 가지도록 하는 일을 등한시했다. 결국 그가 일생을 바쳐 얻어 낸 경험은 그와 함께 사라졌다. 하지만 우리는 이런 몰락도 전체 맥락에 포함시켜야 한다. 음악가들은 여전히 스트라디바리의 제자들이 만든 악기에 대해 '훌륭하지만 그 이상은 아니다'라는 평가를 내린다. 최고의 기술을 지녔던 스트라디바리의 예에서 우리가 배워야 할 교훈은, '명장들의 침묵 속에 담긴 실마리들을 끄집어 내기 위해 그들 스스로 설명하도록 계속 졸라야 하며', 암묵적인 지식을 명시적인 형태로 드러내도록 독촉해야 한다는 것이다. 악착같다고 할 만큼 열성적인 견습생들이 없다면, 소프트웨어 장인정신은 특별히 재능 있는 개발자들을 중심으로 형성된 조그만 고립 집단 내에서만 존재할 것이다.
+스트라디바리는 그의 지식을 충분히 나누지 않았고, 고객들이 학생들의 작업에 대해서도 그 자신과 같은 기대
+수준을 가지도록 하는 일을 등한시했다. 결국 그가 일생을 바쳐 얻어 낸 경험은 그와 함께 사라졌다. 하지만
+우리는 이런 몰락도 전체 맥락에 포함시켜야 한다. 음악가들은 여전히 스트라디바리의 제자들이 만든 악기에
+대해 '훌륭하지만 그 이상은 아니다'라는 평가를 내린다. 최고의 기술을 지녔던 스트라디바리의 예에서 우리가
+배워야 할 교훈은, '명장들의 침묵 속에 담긴 실마리들을 끄집어 내기 위해 그들 스스로 설명하도록 계속
+졸라야 하며', 암묵적인 지식을 명시적인 형태로 드러내도록 독촉해야 한다는 것이다. 악착같다고 할 만큼
+열성적인 견습생들이 없다면, 소프트웨어 장인정신은 특별히 재능 있는 개발자들을 중심으로 형성된 조그만 고립
+집단 내에서만 존재할 것이다.
 
-소프트웨어 개발은, 과학이나 공학처럼 엄밀한 법칙을 세울 수 있을 정도로 우리가 잘 이해하고 있지 못하므로 기예라고 볼 수 있다. Software Engineering Institute 나 Agile Alliance 같은 그룹들이 최선을 다해 노력하고 있지만, 우리 분야에서 아직도 프로젝트의 성패를 결정하는 가장 중요한 요소는 개인의 역량이다. 역량이라는 단어를 사용할 때 우리는 단지 당신이 전산학에 대해 어느 정도의 지식을 가졌는지, 개발 과정은 효율적인지, 경험은 얼마나 많은지를 말하는 것이 아니다. 우리는 제대로 동작하는 소프트웨어를 출시하는 데 필요한 모든 것의 총합을 얘기하고 있는 것이다. 여기에는 당신이 이 책의 패턴들로부터 배운 것이 모두 포함된다. 
+소프트웨어 개발은, 과학이나 공학처럼 엄밀한 법칙을 세울 수 있을 정도로 우리가 잘 이해하고 있지 못하므로
+기예라고 볼 수 있다. Software Engineering Institute 나 Agile Alliance
+같은 그룹들이 최선을 다해 노력하고 있지만, 우리 분야에서 아직도 프로젝트의 성패를 결정하는 가장 중요한
+요소는 개인의 역량이다. 역량이라는 단어를 사용할 때 우리는 단지 당신이 전산학에 대해 어느 정도의 지식을
+가졌는지, 개발 과정은 효율적인지, 경험은 얼마나 많은지를 말하는 것이 아니다. 우리는 제대로 동작하는
+소프트웨어를 출시하는 데 필요한 모든 것의 총합을 얘기하고 있는 것이다. 여기에는 당신이 이 책의
+패턴들로부터 배운 것이 모두 포함된다.
 
-누구든 적용할 수 있고 적용할 때마다 같은 결과를 얻을 수 있을 정도로 일관되게 잘 이해하고 있는지는 못하기에, 역량이 중요한 것이다. 우리 고객은 소프트웨어 프로젝트가 무슨 과학 실험인 양 매번 동일하게 되풀이될 수 있기를 바랄 것이다. 어떤 팀이든 간에 최소한의 역량을 갖췄을 때 원하는 결과가 나올 것임을 확신할 수 있다면 얼마나 좋겠는가. 그러면 고객들은 바라는 시스템을 구축할 개발 팀을 대충 꾸린 다음에 안심하고 기다릴 수 있을 것이다. 하지만 고객들은 그런 대신, 팀을 구성하고서 팀 사람들이 일을 잘 해내기를 바라야 하는 현실을 마뜩잖게 받아들일 수밖에 없다. 만약 규모와 경험 수준이 비슷한 다른 팀이 과거에 뭔가 비슷한 것을 만들었다면, 고객들은 현재 팀도 그럴 수 있으리라 기대한다. 불행하게도 소프트웨어 개발의 역량 수준은 그 범위가 상당히 넓은데, 우리 중의 최고 수준 개발자는 우리 대부분이 불가능할거라 생각하는 일들을 일상적으로 해낼 정도다.
+누구든 적용할 수 있고 적용할 때마다 같은 결과를 얻을 수 있을 정도로 일관되게 잘 이해하고 있는지는
+못하기에, 역량이 중요한 것이다. 우리 고객은 소프트웨어 프로젝트가 무슨 과학 실험인 양 매번 동일하게
+되풀이될 수 있기를 바랄 것이다. 어떤 팀이든 간에 최소한의 역량을 갖췄을 때 원하는 결과가 나올 것임을
+확신할 수 있다면 얼마나 좋겠는가. 그러면 고객들은 바라는 시스템을 구축할 개발 팀을 대충 꾸린 다음에
+안심하고 기다릴 수 있을 것이다. 하지만 고객들은 그런 대신, 팀을 구성하고서 팀 사람들이 일을 잘 해내기를
+바라야 하는 현실을 마뜩잖게 받아들일 수밖에 없다. 만약 규모와 경험 수준이 비슷한 다른 팀이 과거에 뭔가
+비슷한 것을 만들었다면, 고객들은 현재 팀도 그럴 수 있으리라 기대한다. 불행하게도 소프트웨어 개발의 역량
+수준은 그 범위가 상당히 넓은데, 우리 중의 최고 수준 개발자는 우리 대부분이 불가능할거라 생각하는 일들을
+일상적으로 해낼 정도다.
 
-게다가 대부분의 프로그래머들은 자신이 평균 이상이라고 생각한다. 하지만 현실은, 그림에서 보듯이 비대칭적인 분포로 인해 대부분 평균 이하다. 언뜻 납득이 잘 가지 않을지 모르겠지만, 만약 우리가 테이블에 같이 앉아 있는데 빌 게이츠가 합석한다면, 갑자기 이 테이블에 앉은 대부분의 컴퓨터 전문가들이 평균 이하의 급여를 받는 셈이 될 것이다. 말하자면, 역량 분포 곡선의 극단에 위치한 사람들이 전체 분포를 기울게 만드는 것이다. 이것을 **피드백 루프를 만들어라**에서 언급했던 더닝-크루거 효과, 혹은 '인식하지 못하는 무능력' 효과와 결합해서 생각해 보면, 왜 그토록 많은 소프트웨어 프로젝트가 실패로 끝나는지 이해되기 시작할 것이다. 우리가 보유한 역량 수준과 당면 과제를 풀기 위해 필요한 역량 수준은 흔히 일치하지 않는다. 우리가 할 수 있는 일은 방법론을 개선하려고 노력하는 것뿐이다. 하지만 어떤 프로세스라도, 그것이 얼마나 애자일하거나 린하거나 간에, 지금 하고 있는 일이 NP-Complete 라던가 CAP 추측 위반이라고 당신에게 얘기해 주지는 않는다. 하지만 세상에는 정규 표현식이나 HTTP, 유닉스 등에 대해서 그렇게 느끼는 프로그래머들이 있는 것이다. 만약 이런 지식과 기술이 프로젝트의 성공을 위해 필요하다면, 다른 무언가로 그것을 대신할 수는 없다.
+게다가 대부분의 프로그래머들은 자신이 평균 이상이라고 생각한다. 하지만 현실은, 그림에서 보듯이 비대칭적인
+분포로 인해 대부분 평균 이하다. 언뜻 납득이 잘 가지 않을지 모르겠지만, 만약 우리가 테이블에 같이 앉아
+있는데 빌 게이츠가 합석한다면, 갑자기 이 테이블에 앉은 대부분의 컴퓨터 전문가들이 평균 이하의 급여를 받는
+셈이 될 것이다. 말하자면, 역량 분포 곡선의 극단에 위치한 사람들이 전체 분포를 기울게 만드는 것이다.
+이것을 **피드백 루프를 만들어라**에서 언급했던 더닝-크루거 효과, 혹은 '인식하지 못하는 무능력' 효과와
+결합해서 생각해 보면, 왜 그토록 많은 소프트웨어 프로젝트가 실패로 끝나는지 이해되기 시작할 것이다. 우리가
+보유한 역량 수준과 당면 과제를 풀기 위해 필요한 역량 수준은 흔히 일치하지 않는다. 우리가 할 수 있는
+일은 방법론을 개선하려고 노력하는 것뿐이다. 하지만 어떤 프로세스라도, 그것이 얼마나 애자일하거나 린하거나
+간에, 지금 하고 있는 일이 NP-Complete 라던가 CAP 추측 위반이라고 당신에게 얘기해 주지는
+않는다. 하지만 세상에는 정규 표현식이나 HTTP, 유닉스 등에 대해서 그렇게 느끼는 프로그래머들이 있는
+것이다. 만약 이런 지식과 기술이 프로젝트의 성공을 위해 필요하다면, 다른 무언가로 그것을 대신할 수는
+없다.
 
-무언가를 기예라고 말할 때 우리가 의미하는 것 중 하나는, 그것이 기술에 큰 가치를 두는 분야이자 전통이라는 점이다. 이것은 기술을 습득하고, 발전시키고, 최종적으로 전수하는 것까지 포함한다. 진정한 마스터의 특징은, 뛰어난 기술을 전수함으로써 다른 이들에게 미치는 영향 속에서 찾을 수 있다고 우리는 믿는다. 
+무언가를 기예라고 말할 때 우리가 의미하는 것 중 하나는, 그것이 기술에 큰 가치를 두는 분야이자 전통이라는
+점이다. 이것은 기술을 습득하고, 발전시키고, 최종적으로 전수하는 것까지 포함한다. 진정한 마스터의 특징은,
+뛰어난 기술을 전수함으로써 다른 이들에게 미치는 영향 속에서 찾을 수 있다고 우리는 믿는다.
 
-저서 "Better : A Surgeon's Notes on Performance" 에서 아툴 가완디 박사는 외과 의사 이그나스 제멜바이스의 이야기를 들려준다. 1847년 제멜바이스는 병원에서 출산한 산모들의 주요 사망 원인이 '손을 깨끗이 씻지 않은 의사들의 탓' 이라는 것을 밝혀냈다. 그는 의사들이 환자를 진료하는 사이사이 소독제로 손을 씻는 것처럼 간단하지만 치사율을 20%에서 1%로 낮출 수 있는 조치를 소개했다. 하지만 이런 뛰어난 결과를 얻어내는 과정에서 그는 동업자들 전부를 적으로 돌리게 됐다. 상황은 더욱 악화되었고 그의 동료들은 단지 그를 무시하기 위해서 일부러 손을 씻지 않기 시작했다. 제멜바이스가 자기 생각을 제대로 설명하지 못하고 다른 이들을 설득하는 데 실패하면서, 그 자신은 일자리를 잃었고, 나중에 조세프 리스터가 같은 아이디어를 발견할 때까지 20년 동안 많은 사람들이 목숨을 잃었다. 가완디가 얘기했듯, "그는 천재였지만 광인이기도 했으며, 그것이 그를 실패한 천재로 만들었다."
+저서 "Better : A Surgeon's Notes on Performance" 에서 아툴 가완디 박사는
+외과 의사 이그나스 제멜바이스의 이야기를 들려준다. 1847년 제멜바이스는 병원에서 출산한 산모들의 주요
+사망 원인이 '손을 깨끗이 씻지 않은 의사들의 탓' 이라는 것을 밝혀냈다. 그는 의사들이 환자를 진료하는
+사이사이 소독제로 손을 씻는 것처럼 간단하지만 치사율을 20%에서 1%로 낮출 수 있는 조치를 소개했다.
+하지만 이런 뛰어난 결과를 얻어내는 과정에서 그는 동업자들 전부를 적으로 돌리게 됐다. 상황은 더욱
+악화되었고 그의 동료들은 단지 그를 무시하기 위해서 일부러 손을 씻지 않기 시작했다. 제멜바이스가 자기
+생각을 제대로 설명하지 못하고 다른 이들을 설득하는 데 실패하면서, 그 자신은 일자리를 잃었고, 나중에
+조세프 리스터가 같은 아이디어를 발견할 때까지 20년 동안 많은 사람들이 목숨을 잃었다. 가완디가
+얘기했듯, "그는 천재였지만 광인이기도 했으며, 그것이 그를 실패한 천재로 만들었다."
 
-같은 식으로, 이 책에 실린 패턴과 아이디어 중 많은 부분은 갈등과 저항을 불러올 것이다. 이것은 어느 정도는 현재 상황으로 이득을 보는 사람들, 상황이 개선됐을 때 뭔가 잃을 것을 두려워하는 사람들이 늘 있기 때문이다. 하지만 우리는 제멜바이스의 실패로부터 교훈을 얻을 필요가 있다. 우리는 사람들에게 우리 생각을 설명하면서 이런 방식으로 시도해 보자고 잘 설득할 필요가 있다. 또한 긍정적인 변화를 기꺼이 받아들이고자 하는 조직들을 엮는 공동체를 만드는 데 집중하고, 마스터가 되려는 포부를 품은 사람들을 찾아 나설 수 있다.
+같은 식으로, 이 책에 실린 패턴과 아이디어 중 많은 부분은 갈등과 저항을 불러올 것이다. 이것은 어느
+정도는 현재 상황으로 이득을 보는 사람들, 상황이 개선됐을 때 뭔가 잃을 것을 두려워하는 사람들이 늘 있기
+때문이다. 하지만 우리는 제멜바이스의 실패로부터 교훈을 얻을 필요가 있다. 우리는 사람들에게 우리 생각을
+설명하면서 이런 방식으로 시도해 보자고 잘 설득할 필요가 있다. 또한 긍정적인 변화를 기꺼이 받아들이고자
+하는 조직들을 엮는 공동체를 만드는 데 집중하고, 마스터가 되려는 포부를 품은 사람들을 찾아 나설 수 있다.
 
-소프트웨어 개발 분야에서 무엇이 모여 숙달됨을 이루는지 우리가 정확히 알지는 못하지만, 어떤 것이 상관없는지는 알고 있다. 천재이거나, 운이 좋거나, 부유하거나, 유명해지는 것이 당신을 마스터로 만들어 주지는 않는다. 이런 것들은 장인정신에 꼭 필요한 것이 아니다. 소프트웨어 개발의 모든 측면을 아우르는 기술과, 그 기술을 전수해서 우리 분야가 앞으로 나아갈 수 있게 하는 능력, 그것이 장인정신의 핵심이다.
+소프트웨어 개발 분야에서 무엇이 모여 숙달됨을 이루는지 우리가 정확히 알지는 못하지만, 어떤 것이
+상관없는지는 알고 있다. 천재이거나, 운이 좋거나, 부유하거나, 유명해지는 것이 당신을 마스터로 만들어
+주지는 않는다. 이런 것들은 장인정신에 꼭 필요한 것이 아니다. 소프트웨어 개발의 모든 측면을 아우르는
+기술과, 그 기술을 전수해서 우리 분야가 앞으로 나아갈 수 있게 하는 능력, 그것이 장인정신의 핵심이다.
 
-우리가 마스터들을 분간할 수 있는 방법 중 하나는, 그의 학생들이 야망과 성취라는 측면에서 마침내 스승을 능가하는지를 보는 것이다. 마스터들은 자신의 권위에 대한 무조건적인 복종이 위험하다는 것을 알 것이다. 그 이유는 이렇다.
+우리가 마스터들을 분간할 수 있는 방법 중 하나는, 그의 학생들이 야망과 성취라는 측면에서 마침내 스승을
+능가하는지를 보는 것이다. 마스터들은 자신의 권위에 대한 무조건적인 복종이 위험하다는 것을 알 것이다. 그
+이유는 이렇다.
 
-"탁월함의 추구는 스트라디바리의 공방처럼 조직의 장기 존속에 관한 문제를 유발할 수 있다. 여기서 고품질 작업에 대한 경험은 마스터 자신의 암묵적인 지식 속에만 들어 있으며, 이것은 즉 그의 탁월성이 다음 세대로 전해질 수 없다는 것을 의미한다."
+"탁월함의 추구는 스트라디바리의 공방처럼 조직의 장기 존속에 관한 문제를 유발할 수 있다. 여기서 고품질
+작업에 대한 경험은 마스터 자신의 암묵적인 지식 속에만 들어 있으며, 이것은 즉 그의 탁월성이 다음 세대로
+전해질 수 없다는 것을 의미한다."
 
-한 사람의 견습생으로서 당신은 선생들보다 더 훌륭해지는 것을 목표로 해야 한다. 그리고 좋은 선생이라면 그 목표를 성취하도록 당신을 도우려할 것이다.
+한 사람의 견습생으로서 당신은 선생들보다 더 훌륭해지는 것을 목표로 해야 한다. 그리고 좋은 선생이라면 그
+목표를 성취하도록 당신을 도우려할 것이다.
 
-마스터란 스스로 칭할 수 있는 성격의 것이 아니다. 사람의 허영심이 자기 평가의 엄밀성에 한계를 긋기 때문이다. 만약 누가 마스터라고 주장한다면 어떤 근거로 그렇게 얘기하는지 물어보라. 자신의 작업 성과를 지목하는가? 당신보다 더 숙련된 사람의 성과물을 평가하는 일은 어렵기로 악명이 높다. 그는 그리도 쉽게 만드는데 당신에게는 왜 그토록 어려운지 당신은 이해할 수 없을 것이다. 기껏해야 이 사람은 나보다 더 숙련되었다고 말할 수 있을 뿐이다. 하지만 그것만으로는 충분하지 않다. 당신보다 앞서 있다고 해서 마스터는 아니기 때문이다. 
+마스터란 스스로 칭할 수 있는 성격의 것이 아니다. 사람의 허영심이 자기 평가의 엄밀성에 한계를 긋기
+때문이다. 만약 누가 마스터라고 주장한다면 어떤 근거로 그렇게 얘기하는지 물어보라. 자신의 작업 성과를
+지목하는가? 당신보다 더 숙련된 사람의 성과물을 평가하는 일은 어렵기로 악명이 높다. 그는 그리도 쉽게
+만드는데 당신에게는 왜 그토록 어려운지 당신은 이해할 수 없을 것이다. 기껏해야 이 사람은 나보다 더
+숙련되었다고 말할 수 있을 뿐이다. 하지만 그것만으로는 충분하지 않다. 당신보다 앞서 있다고 해서 마스터는
+아니기 때문이다.
 
-그가 자신의 자격증을 지목하는가? 어찌되었든, '마스터 소프트웨어 장인'이라는 자격증은없다. 마스터가 되려는 이가 주장할 수 있는 것은, 자기 동료들과 이미 마스터라 믿는 사람들이 그에게 이제 한 단계 올라설 준비가 되었다고 하는 것뿐이다. 이것은 명백히 재귀적인 정의다. 이미 마스터인 사람들만이 당신은 이제 마스터라고 얘기할 수 있는데, 그 사람들에게 과연 그런 영예를 수여하기에 충분한 자격이 있는지는 당신이 마스터가 되기 전까지는 말할 수가 없다. 유감스럽게도 새로운 기예의 분야가 생겨나는 데에 이 외의 다른 방법은 없다. 모든 기예는 만족스럽지 못한 정의와 불명확한 기준을 가지고 세상 속으로 뛰어들면서 시작되게 마련이다. 우리가 공동체를 구축하고 명확한 지식 체계를 갖출 때까지는 이런 상황을 받아들여야 한다. 
+그가 자신의 자격증을 지목하는가? 어찌되었든, '마스터 소프트웨어 장인'이라는 자격증은없다. 마스터가 되려는
+이가 주장할 수 있는 것은, 자기 동료들과 이미 마스터라 믿는 사람들이 그에게 이제 한 단계 올라설 준비가
+되었다고 하는 것뿐이다. 이것은 명백히 재귀적인 정의다. 이미 마스터인 사람들만이 당신은 이제 마스터라고
+얘기할 수 있는데, 그 사람들에게 과연 그런 영예를 수여하기에 충분한 자격이 있는지는 당신이 마스터가 되기
+전까지는 말할 수가 없다. 유감스럽게도 새로운 기예의 분야가 생겨나는 데에 이 외의 다른 방법은 없다. 모든
+기예는 만족스럽지 못한 정의와 불명확한 기준을 가지고 세상 속으로 뛰어들면서 시작되게 마련이다. 우리가
+공동체를 구축하고 명확한 지식 체계를 갖출 때까지는 이런 상황을 받아들여야 한다.
 
-그때까지는, 마스터를 찾아내려면 그의 작업과 견습생들이 생산해낸 성과물의 품질을 검사하는 것이 최선의 방법이다. 견습생들의 작업과 생활은 마스터의 재능과 행운보다는 역량을 돋보이게 해 준다. 천재성을 가졌다고 해서 곧 마스터인 것은 아니지만, 누군가가 다른 이들을 훈련시켜서 자신과 같거나 더 능가하는 수준으로 이끌 수 있다면, 그가 잠재적인 마스터라는 것은 분명해진다.
+그때까지는, 마스터를 찾아내려면 그의 작업과 견습생들이 생산해낸 성과물의 품질을 검사하는 것이 최선의
+방법이다. 견습생들의 작업과 생활은 마스터의 재능과 행운보다는 역량을 돋보이게 해 준다. 천재성을 가졌다고
+해서 곧 마스터인 것은 아니지만, 누군가가 다른 이들을 훈련시켜서 자신과 같거나 더 능가하는 수준으로 이끌
+수 있다면, 그가 잠재적인 마스터라는 것은 분명해진다.
 
-이 책의 저자들은 마스터가 아니다. 우리는 기껏해야 앞에 놓인 길에 대해서 배운 것을 나누고자 하는 숙련공 정도일 것이다. 1부터 10까지 놓인 눈금 위에서 우리는 스스로 9 정도라고 생각하지만, 가끔은 눈금이 100까지도 가겠구나 깨닫게 만드는 사람들을 만난다. 우리가 깊이 존경하는 전문가들은 많지만, 소프트웨어 개발이라는 기예에는 여전히 마스터가 없다. 이것은 문제가 아니다. 소프트웨어는 새로운 기예이고, 우리는 길어야 70년 정도 소프트웨어를 만들어 왔을 뿐이다. 그러니 우리는 벌써 마스터 소프트웨어 장인이 배출되리라고 기대해서는 안 된다. 
+이 책의 저자들은 마스터가 아니다. 우리는 기껏해야 앞에 놓인 길에 대해서 배운 것을 나누고자 하는 숙련공
+정도일 것이다. 1부터 10까지 놓인 눈금 위에서 우리는 스스로 9 정도라고 생각하지만, 가끔은 눈금이
+100까지도 가겠구나 깨닫게 만드는 사람들을 만난다. 우리가 깊이 존경하는 전문가들은 많지만, 소프트웨어
+개발이라는 기예에는 여전히 마스터가 없다. 이것은 문제가 아니다. 소프트웨어는 새로운 기예이고, 우리는
+길어야 70년 정도 소프트웨어를 만들어 왔을 뿐이다. 그러니 우리는 벌써 마스터 소프트웨어 장인이
+배출되리라고 기대해서는 안 된다.
 
-그러면 진정한 마스터가 존재하지 않는다는 것을 어떻게 확신할 수 있을까? 그럴 수는 없다. 우리가 찾지 못했더라도 마스터들은 존재할 수 있다. 증명의 부재가 곧 부재의 증거는 아니다. 그러나 우리는 소프트웨어 분야의 마스터가 존재한다면 우리 업계 전체에 걸쳐 파문을 일으킬 것이라고 생각한다. 이는 단지 그들이 만들어 낸 제품이나 도구가 월등하리라는 이유만이 아니라, 그 아래의 학생들도 역시 그럴 것이기 때문이다. 마스터가 존재한다면 특정한 근원지에서 비롯되는 탁월한 견습생과 숙련공의 흐름이 있을 것이다. 이 학생들은 단연 돋보일 것이다. 가르치고, '배우고 바꾸는, 그리고 다른 누구보다도 빨리 그렇게 하는' 그들의 능력은, 그들이 우리 나머지 사람들로부터 멀리 벗어나리라는 것을 의미한다. 가완디가 말한 '긍정적인 괴짜' 처럼, 이런 마스터들의 작업장은 어쩐지 이상하게 여겨지겠지만 거기서 나오는 결과물은 명백히 탁월할 것이다. 단순히 그들의 사례를 베끼는 것만으로도 상당한 향상이 있겠지만, 그들이 계속해서 발전하는 동안 우리가 뒤처지지 않고 따라잡으려면 오로지 이런 마스터 아래에서 견습생활을 하는 방법밖에는 없을 것이다.
+그러면 진정한 마스터가 존재하지 않는다는 것을 어떻게 확신할 수 있을까? 그럴 수는 없다. 우리가 찾지
+못했더라도 마스터들은 존재할 수 있다. 증명의 부재가 곧 부재의 증거는 아니다. 그러나 우리는 소프트웨어
+분야의 마스터가 존재한다면 우리 업계 전체에 걸쳐 파문을 일으킬 것이라고 생각한다. 이는 단지 그들이 만들어
+낸 제품이나 도구가 월등하리라는 이유만이 아니라, 그 아래의 학생들도 역시 그럴 것이기 때문이다. 마스터가
+존재한다면 특정한 근원지에서 비롯되는 탁월한 견습생과 숙련공의 흐름이 있을 것이다. 이 학생들은 단연 돋보일
+것이다. 가르치고, '배우고 바꾸는, 그리고 다른 누구보다도 빨리 그렇게 하는' 그들의 능력은, 그들이 우리
+나머지 사람들로부터 멀리 벗어나리라는 것을 의미한다. 가완디가 말한 '긍정적인 괴짜' 처럼, 이런 마스터들의
+작업장은 어쩐지 이상하게 여겨지겠지만 거기서 나오는 결과물은 명백히 탁월할 것이다. 단순히 그들의 사례를
+베끼는 것만으로도 상당한 향상이 있겠지만, 그들이 계속해서 발전하는 동안 우리가 뒤처지지 않고 따라잡으려면
+오로지 이런 마스터 아래에서 견습생활을 하는 방법밖에는 없을 것이다.
 
-이 책의 도입부에서 마스터가 없다고 얘기했다면 당신은 낙담했을지도 모르겠다. 이제 우리가 짧은 몇 해 동안 수집한 패턴들을 보면서 우리 분야에 얼마나 배울 것이 많은지 알았으니, 당신이 이런 사실을 기회로, 혹은 도전으로까지 여기게 되기를 바란다. 우리는 우리 작업에 고무된 견습생들의 논쟁을 기대한다. 마스터는 없다... 아직까지는...
+이 책의 도입부에서 마스터가 없다고 얘기했다면 당신은 낙담했을지도 모르겠다. 이제 우리가 짧은 몇 해 동안
+수집한 패턴들을 보면서 우리 분야에 얼마나 배울 것이 많은지 알았으니, 당신이 이런 사실을 기회로, 혹은
+도전으로까지 여기게 되기를 바란다. 우리는 우리 작업에 고무된 견습생들의 논쟁을 기대한다. 마스터는
+없다... 아직까지는...
