--- a/독서/6. 함께 자라기 애자일로 가는 길/0.0 목차.md
+++ b/독서/6. 함께 자라기 애자일로 가는 길/0.0 목차.md
@@ -1,3 +1,3 @@
-[[01-0. 자라기]]
-[[02-0. 함께]]
-[[03-0. 애자일]]
+[01-0. 자라기](01.%20자라기/01-0.%20자라기.md)  
+[02-0. 함께](02.%20함께/02-0.%20함께.md)  
+[03-0. 애자일](03.%20애자일/03-0.%20애자일.md)  
