--- a/독서/6. 함께 자라기 애자일로 가는 길/01. 자라기/01-0. 자라기.md
+++ b/독서/6. 함께 자라기 애자일로 가는 길/01. 자라기/01-0. 자라기.md
@@ -1,44 +1,43 @@
-[[01-01️. 당신은 몇 년 차? - 1]]
-[[01-02. 당신은 몇 년 차? - 2]]
-[[01-03. 당신은 몇 년 차? - 3]]
-[[01-04. 당신은 몇 년 차? - 4]]
-[[01-05. 당신은 몇 년 차? - 5]]
-[[01-06. 당신은 몇 년 차? - 6]]
-[[01-07. 자기계발은 복리로 돌아온다 - 1]]
-[[01-08. 자기계발은 복리로 돌아온다 - 2]]
-[[01-09. 학습 프레임과 실행 프레임]]
-[[01-10. 가장 학습하기 힘든 직업이 살아남는다 - 1]]
-[[01-11. 가장 학습하기 힘든 직업이 살아남는다 - 2]]
-[[01-12. 가장 학습하기 힘든 직업이 살아남는다 - 3]]
-[[01-13. 달인이 되는 비결 - 1]]
-[[01-14. 달인이 되는 비결 - 2]]
-[[01-15. 수십 년 동안 전문가가 안 되는 비결 - 1]]
-[[01-16. 수십 년 동안 전문가가 안 되는 비결 - 2]]
-[[01-17. 당신이 제자리걸음인 이유 - 1]]
-[[01-18. 당신이 제자리걸음인 이유 - 2]]
-[[01-19. 당신이 제자리걸음인 이유 - 3]]
-[[01-20. 당신이 제자리걸음인 이유 - 4]]
-[[01-21. 당신이 제자리걸음인 이유 - 5]]
-[[01-22. 당신이 제자리걸음인 이유 - 6]]
-[[01-23. 당신이 제자리걸음인 이유 - 7]]
-[[01-24. 당신이 제자리걸음인 이유 - 8]]
-[[01-25. 당신이 제자리걸음인 이유 - 9]]
-[[01-26. 당신이 제자리걸음인 이유 - 10]]
-[[01-27. 당신이 제자리걸음인 이유 - 11]]
-[[01-28. 의도적 수련의 일상적 예시 - 1]]
-[[01-29. 의도적 수련의 일상적 예시 - 2]]
-[[01-30. 의도적 수련의 일상적 예시 - 3]]
-[[01-31. 프로그래밍 언어 배우기의 달인 - 1]]
-[[01-32. 프로그래밍 언어 배우기의 달인 - 2]]
-[[01-33. 프로그래밍 언어 배우기의 달인 - 3]]
-[[01-34. 프로그래밍 언어 배우기의 달인 - 4]]
-[[01-35. 프로그래밍 언어 배우기의 달인 - 5]]
-[[01-36. 실수는 예방하는 것이 아니라 관리하는 것이다 - 1]]
-[[01-37. 실수는 예방하는 것이 아니라 관리하는 것이다 - 2]]
-[[01-38. 뛰어난 선생에 대한 미신 - 1]]
-[[01-39. 뛰어난 선생에 대한 미신 - 2]]
-[[01-40. 뛰어난 선생에 대한 미신 - 3]]
-[[01-41. 나홀로 전문가에 대한 미신 - 1]]
-[[01-42. 나홀로 전문가에 대한 미신 - 2]]
-[[01-43. 나홀로 전문가에 대한 미신 - 3]]
-
+[01-01️. 당신은 몇 년 차? - 1](01-01️.%20당신은%20몇%20년%20차%3F%20-%201.md)  
+[01-02. 당신은 몇 년 차? - 2](01-02.%20당신은%20몇%20년%20차%3F%20-%202.md)  
+[01-03. 당신은 몇 년 차? - 3](01-03.%20당신은%20몇%20년%20차%3F%20-%203.md)  
+[01-04. 당신은 몇 년 차? - 4](01-04.%20당신은%20몇%20년%20차%3F%20-%204.md)  
+[01-05. 당신은 몇 년 차? - 5](01-05.%20당신은%20몇%20년%20차%3F%20-%205.md)  
+[01-06. 당신은 몇 년 차? - 6](01-06.%20당신은%20몇%20년%20차%3F%20-%206.md)  
+[01-07. 자기계발은 복리로 돌아온다 - 1](01-07.%20자기계발은%20복리로%20돌아온다%20-%201.md)  
+[01-08. 자기계발은 복리로 돌아온다 - 2](01-08.%20자기계발은%20복리로%20돌아온다%20-%202.md)  
+[01-09. 학습 프레임과 실행 프레임](01-09.%20학습%20프레임과%20실행%20프레임.md)  
+[01-10. 가장 학습하기 힘든 직업이 살아남는다 - 1](01-10.%20가장%20학습하기%20힘든%20직업이%20살아남는다.md)  
+[01-11. 가장 학습하기 힘든 직업이 살아남는다 - 2](01-11.%20가장%20학습하기%20힘든%20직업이%20살아남는다%20-%202.md)  
+[01-12. 가장 학습하기 힘든 직업이 살아남는다 - 3](01-12.%20가장%20학습하기%20힘든%20직업이%20살아남는다%20-%203.md)  
+[01-13. 달인이 되는 비결 - 1](01-13.%20달인이%20되는%20비결%20-%201.md)  
+[01-14. 달인이 되는 비결 - 2](01-14.%20달인이%20되는%20비결%20-%202.md)  
+[01-15. 수십 년 동안 전문가가 안 되는 비결 - 1](01-15.%20수십%20년%20동안%20전문가가%20안%20되는%20비결%20-%201.md)  
+[01-16. 수십 년 동안 전문가가 안 되는 비결 - 2](01-16.%20수십%20년%20동안%20전문가가%20안%20되는%20비결%20-%202.md)  
+[01-17. 당신이 제자리걸음인 이유 - 1](01-17.%20당신이%20제자리걸음인%20이유%20-%201.md)  
+[01-18. 당신이 제자리걸음인 이유 - 2](01-18.%20당신이%20제자리걸음인%20이유%20-%202.md)  
+[01-19. 당신이 제자리걸음인 이유 - 3](01-19.%20당신이%20제자리걸음인%20이유%20-%203.md)  
+[01-20. 당신이 제자리걸음인 이유 - 4](01-20.%20당신이%20제자리걸음인%20이유%20-%204.md)  
+[01-21. 당신이 제자리걸음인 이유 - 5](01-21.%20당신이%20제자리걸음인%20이유%20-%205.md)  
+[01-22. 당신이 제자리걸음인 이유 - 6](01-22.%20당신이%20제자리걸음인%20이유%20-%206.md)  
+[01-23. 당신이 제자리걸음인 이유 - 7](01-23.%20당신이%20제자리걸음인%20이유%20-%207.md)  
+[01-24. 당신이 제자리걸음인 이유 - 8](01-24.%20당신이%20제자리걸음인%20이유%20-%208.md)  
+[01-25. 당신이 제자리걸음인 이유 - 9](01-25.%20당신이%20제자리걸음인%20이유%20-%209.md)  
+[01-26. 당신이 제자리걸음인 이유 - 10](01-26.%20당신이%20제자리걸음인%20이유%20-%2010.md)  
+[01-27. 당신이 제자리걸음인 이유 - 11](01-27.%20당신이%20제자리걸음인%20이유%20-%2011.md)  
+[01-28. 의도적 수련의 일상적 예시 - 1](01-28.%20의도적%20수련의%20일상적%20예시%20-%201.md)  
+[01-29. 의도적 수련의 일상적 예시 - 2](01-29.%20의도적%20수련의%20일상적%20예시%20-%202.md)  
+[01-30. 의도적 수련의 일상적 예시 - 3](01-30.%20의도적%20수련의%20일상적%20예시%20-%203.md)  
+[01-31. 프로그래밍 언어 배우기의 달인 - 1](01-31.%20프로그래밍%20언어%20배우기의%20달인%20-%201.md)  
+[01-32. 프로그래밍 언어 배우기의 달인 - 2](01-32.%20프로그래밍%20언어%20배우기의%20달인%20-%202.md)  
+[01-33. 프로그래밍 언어 배우기의 달인 - 3](01-33.%20프로그래밍%20언어%20배우기의%20달인%20-%203.md)  
+[01-34. 프로그래밍 언어 배우기의 달인 - 4](01-34.%20프로그래밍%20언어%20배우기의%20달인%20-%204.md)  
+[01-35. 프로그래밍 언어 배우기의 달인 - 5](01-35.%20프로그래밍%20언어%20배우기의%20달인%20-%205.md)  
+[01-36. 실수는 예방하는 것이 아니라 관리하는 것이다 - 1](01-36.%20실수는%20예방하는%20것이%20아니라%20관리하는%20것이다%20-%201.md)  
+[01-37. 실수는 예방하는 것이 아니라 관리하는 것이다 - 2](01-37.%20실수는%20예방하는%20것이%20아니라%20관리하는%20것이다%20-%202.md)  
+[01-38. 뛰어난 선생에 대한 미신 - 1](01-38.%20뛰어난%20선생에%20대한%20미신%20-%201.md)  
+[01-39. 뛰어난 선생에 대한 미신 - 2](01-39.%20뛰어난%20선생에%20대한%20미신%20-%202.md)  
+[01-40. 뛰어난 선생에 대한 미신 - 3](01-40.%20뛰어난%20선생에%20대한%20미신%20-%203.md)  
+[01-41. 나홀로 전문가에 대한 미신 - 1](01-41.%20나홀로%20전문가에%20대한%20미신%20-%201.md)  
+[01-42. 나홀로 전문가에 대한 미신 - 2](01-42.%20나홀로%20전문가에%20대한%20미신%20-%202.md)  
+[01-43. 나홀로 전문가에 대한 미신 - 3](01-43.%20나홀로%20전문가에%20대한%20미신%20-%203.md)  
