--- a/독서/6. 함께 자라기 애자일로 가는 길/02. 함께/02-0. 함께.md
+++ b/독서/6. 함께 자라기 애자일로 가는 길/02. 함께/02-0. 함께.md
@@ -1,35 +1,35 @@
-[[02-01. 소프트웨어 관리자의 개선 우선순위 - 1]]
-[[02-02. 소프트웨어 관리자의 개선 우선순위 - 2]]
-[[02-03. 소프트웨어 관리자의 개선 우선순위 - 3]]
-[[02-04. 소프트웨어 관리자의 개선 우선순위 - 4]]
-[[02-05. 협력을 통한 추상화 - 1]]
-[[02-06. 협력을 통한 추상화 - 2]]
-[[02-07. 협력을 통한 추상화 - 3]]
-[[02-08. 협력을 통한 추상화 - 4]]
-[[02-09. 협력을 통한 추상화 - 5]]
-[[02-10. 신뢰를 깎는 공유인가 신뢰를 쌓는 공유인가 - 1]]
-[[02-11. 신뢰를 깎는 공유인가 신뢰를 쌓는 공유인가 - 2]]
-[[02-12. 신뢰를 깎는 공유인가 신뢰를 쌓는 공유인가 - 3]]
-[[02-13. 객관성의 주관성 - 1]]
-[[02-14. 객관성의 주관성 - 2]]
-[[02-15. 객관성의 주관성 - 3]]
-[[02-16. 객관성의 주관성 - 4]]
-[[02-17. 이것도 모르세요? - 1]]
-[[02-18. 이것도 모르세요? - 2]]
-[[02-19. 이것도 모르세요? - 3]]
-[[02-20. 하향식 접근의 함정 - 1]]
-[[02-21. 하향식 접근의 함정 - 2]]
-[[02-22. 하향식 접근의 함정 - 3]]
-[[02-23. 전문가팀이 실패하는 이유 - 1]]
-[[02-24. 구글이 밝힌 탁월한 팀의 비밀 - 1]]
-[[02-25. 쾌속 학습팀 - 1]]
-[[02-26. 쾌속 학습팀 - 2]]
-[[02-27. 쾌속 학습팀 - 3]]
-[[02-28. 쾌속 학습팀 - 4]]
-[[02-29. 쾌속 학습팀 - 5]]
-[[02-30. 쾌속 학습팀 - 6]]
-[[02-31. 쾌속 학습팀 - 7]]
-[[02-32. 프로젝트 확률론 - 1]]
-[[02-33. 프로젝트 확률론 - 2]]
-[[02-34. 프로젝트 확률론 - 3]]
-[[02-35. 프로젝트 확률론 - 4]]
+[02-01. 소프트웨어 관리자의 개선 우선순위 - 1](02-01.%20소프트웨어%20관리자의%20개선%20우선순위%20-%201.md)  
+[02-02. 소프트웨어 관리자의 개선 우선순위 - 2](02-02.%20소프트웨어%20관리자의%20개선%20우선순위%20-%202.md)  
+[02-03. 소프트웨어 관리자의 개선 우선순위 - 3](02-03.%20소프트웨어%20관리자의%20개선%20우선순위%20-%203.md)  
+[02-04. 소프트웨어 관리자의 개선 우선순위 - 4](02-04.%20소프트웨어%20관리자의%20개선%20우선순위%20-%204.md)  
+[02-05. 협력을 통한 추상화 - 1](02-05.%20협력을%20통한%20추상화%20-%201.md)  
+[02-06. 협력을 통한 추상화 - 2](02-06.%20협력을%20통한%20추상화%20-%202.md)  
+[02-07. 협력을 통한 추상화 - 3](02-07.%20협력을%20통한%20추상화%20-%203.md)  
+[02-08. 협력을 통한 추상화 - 4](02-08.%20협력을%20통한%20추상화%20-%204.md)  
+[02-09. 협력을 통한 추상화 - 5](02-09.%20협력을%20통한%20추상화%20-%205.md)  
+[02-10. 신뢰를 깎는 공유인가 신뢰를 쌓는 공유인가 - 1](02-10.%20신뢰를%20깎는%20공유인가%20신뢰를%20쌓는%20공유인가%20-%201.md)  
+[02-11. 신뢰를 깎는 공유인가 신뢰를 쌓는 공유인가 - 2](02-11.%20신뢰를%20깎는%20공유인가%20신뢰를%20쌓는%20공유인가%20-%202.md)  
+[02-12. 신뢰를 깎는 공유인가 신뢰를 쌓는 공유인가 - 3](02-12.%20신뢰를%20깎는%20공유인가%20신뢰를%20쌓는%20공유인가%20-%203.md)  
+[02-13. 객관성의 주관성 - 1](02-13.%20객관성의%20주관성%20-%201.md)  
+[02-14. 객관성의 주관성 - 2](02-14.%20객관성의%20주관성%20-%202.md)  
+[02-15. 객관성의 주관성 - 3](02-15.%20객관성의%20주관성%20-%203.md)  
+[02-16. 객관성의 주관성 - 4](02-16.%20객관성의%20주관성%20-%204.md)  
+[02-17. 이것도 모르세요? - 1](02-17.%20이것도%20모르세요%3F%20-%201.md)  
+[02-18. 이것도 모르세요? - 2](02-18.%20이것도%20모르세요%3F%20-%202.md)  
+[02-19. 이것도 모르세요? - 3](02-19.%20이것도%20모르세요%3F%20-%203.md)  
+[02-20. 하향식 접근의 함정 - 1](02-20.%20하향식%20접근의%20함정%20-%201.md)  
+[02-21. 하향식 접근의 함정 - 2](02-21.%20하향식%20접근의%20함정%20-%202.md)  
+[02-22. 하향식 접근의 함정 - 3](02-22.%20하향식%20접근의%20함정%20-%203.md)  
+[02-23. 전문가팀이 실패하는 이유 - 1](02-23.%20전문가팀이%20실패하는%20이유%20-%201.md)  
+[02-24. 구글이 밝힌 탁월한 팀의 비밀 - 1](02-24.%20구글이%20밝힌%20탁월한%20팀의%20비밀%20-%201.md)  
+[02-25. 쾌속 학습팀 - 1](02-25.%20쾌속%20학습팀%20-%201.md)  
+[02-26. 쾌속 학습팀 - 2](02-26.%20쾌속%20학습팀%20-%202.md)  
+[02-27. 쾌속 학습팀 - 3](02-27.%20쾌속%20학습팀%20-%203.md)  
+[02-28. 쾌속 학습팀 - 4](02-28.%20쾌속%20학습팀%20-%204.md)  
+[02-29. 쾌속 학습팀 - 5](02-29.%20쾌속%20학습팀%20-%205.md)  
+[02-30. 쾌속 학습팀 - 6](02-30.%20쾌속%20학습팀%20-%206.md)  
+[02-31. 쾌속 학습팀 - 7](02-31.%20쾌속%20학습팀%20-%207.md)  
+[02-32. 프로젝트 확률론 - 1](02-32.%20프로젝트%20확률론%20-%201.md)  
+[02-33. 프로젝트 확률론 - 2](02-33.%20프로젝트%20확률론%20-%202.md)  
+[02-34. 프로젝트 확률론 - 3](02-34.%20프로젝트%20확률론%20-%203.md)  
+[02-35. 프로젝트 확률론 - 4](02-35.%20프로젝트%20확률론%20-%204.md)  
