--- a/독서/6. 함께 자라기 애자일로 가는 길/03. 애자일/03-0. 애자일.md
+++ b/독서/6. 함께 자라기 애자일로 가는 길/03. 애자일/03-0. 애자일.md
@@ -1,8 +1,8 @@
-[[03-01. 애자일의 씨앗 - 1]]
-[[03-02. 애자일의 씨앗 - 2]]
-[[03-03. 애자일 도입 성공 요인 분석 - 1]]
-[[03-04. 애자일 도입 성공 요인 분석 - 2]]
-[[03-05. 애자일 도입 성공 요인 분석 - 3]]
-[[03-06. 애자일 도입 성공 요인 분석 - 4]]
-[[03-07. 당신의 조직에 새 방법론이 먹히지 않는 이유 - 1]]
-[[03-08. 애자일을 애자일스럽게 도입하기 - 1]]
+[03-01. 애자일의 씨앗 - 1](03-01.%20애자일의%20씨앗%20-%201.md)  
+[03-02. 애자일의 씨앗 - 2](03-02.%20애자일의%20씨앗%20-%202.md)  
+[03-03. 애자일 도입 성공 요인 분석 - 1](03-03.%20애자일%20도입%20성공%20요인%20분석%20-%201.md)  
+[03-04. 애자일 도입 성공 요인 분석 - 2](03-04.%20애자일%20도입%20성공%20요인%20분석%20-%202.md)  
+[03-05. 애자일 도입 성공 요인 분석 - 3](03-05.%20애자일%20도입%20성공%20요인%20분석%20-%203.md)  
+[03-06. 애자일 도입 성공 요인 분석 - 4](03-06.%20애자일%20도입%20성공%20요인%20분석%20-%204.md)  
+[03-07. 당신의 조직에 새 방법론이 먹히지 않는 이유 - 1](03-07.%20당신의%20조직에%20새%20방법론이%20먹히지%20않는%20이유%20-%201.md)  
+[03-08. 애자일을 애자일스럽게 도입하기 - 1](03-08.%20애자일을%20애자일스럽게%20도입하기%20-%201.md)  
