--- a/독서/1. 서평/02. 프로그래머의 길 멘토에게 묻다 를 읽고 📝.md
+++ b/독서/1. 서평/02. 프로그래머의 길 멘토에게 묻다 를 읽고 📝.md
@@ -1,34 +1,69 @@
-
 - 저자 : 데이브 후버, 애디웨일 오시나이
 - ISBN : 9788991268807
 - 분량 : 288쪽
-- 링크 : https://ebook-product.kyobobook.co.kr/dig/epd/ebook/E000003215769
+-
 
-첫 회사 생활에 그럭저럭 적응은 해냈으나 다음으로는 커리어 걱정이 스멀스멀 올라오기 시작했다. 어떤 업무를 어떻게 잘 해내야 할지, 상급자의 수준으로 올라가기 위해서는 어떤 노력을 해야 하는지, 더 나아가 다음 회사를 위해서는 어떤 부분이 보완 되어야 하는지 등등 말이다. 어떤 태도로 일을 접해야 하며 다른 개발자들과 어떻게 소통해야 할지 멘토링을 받아볼지 고민했었다. 그러던 시기에 해당 내용으로 도움을 주는 책을 알게 되어 읽게 되었다. 바로 "프로그래머의 길 멘토에게 묻다" 이다.
+링크 : https://ebook-product.kyobobook.co.kr/dig/epd/ebook/E000003215769
 
-이제 막 개발자로 취업을 성공한 사람들을 독자로 가정하고 내용이 진행된다. 소프트웨어 개발 장인이 되기 위한 여정에서 도움이 될 조언을 선배(저자)에게 얻을 수 있는 책이다. 개발자로 생활하면서 커리어의 여러 굴곡을 만날 때, 어떤 태도로 어떤 방향을 바라봐야 할지 힌트를 얻을 수 있다.
+첫 회사 생활에 그럭저럭 적응은 해냈으나 다음으로는 커리어 걱정이 스멀스멀 올라오기 시작했다. 어떤 업무를
+어떻게 잘 해내야 할지, 상급자의 수준으로 올라가기 위해서는 어떤 노력을 해야 하는지, 더 나아가 다음
+회사를 위해서는 어떤 부분이 보완 되어야 하는지 등등 말이다. 어떤 태도로 일을 접해야 하며 다른 개발자들과
+어떻게 소통해야 할지 멘토링을 받아볼지 고민했었다. 그러던 시기에 해당 내용으로 도움을 주는 책을 알게 되어
+읽게 되었다. 바로 "프로그래머의 길 멘토에게 묻다" 이다.
 
-책의 내용은 연결되어 있지 않아서 부분별 "상황" 부분만 살펴본 다음에 자기에게 가장 적당한 주제를 골라 읽으면 된다. 책에서는 이 주제를 "패턴"이라고 부른다. 그리고 매번 패턴의 끝에는 연관된 다른 패턴을 리스트로 보여준다. 따라서 관련한 패턴을 더 알고 싶다면 바로 그 패턴으로 이동해 내용을 살펴볼 수 있다.
+이제 막 개발자로 취업을 성공한 사람들을 독자로 가정하고 내용이 진행된다. 소프트웨어 개발 장인이 되기 위한
+여정에서 도움이 될 조언을 선배(저자)에게 얻을 수 있는 책이다. 개발자로 생활하면서 커리어의 여러 굴곡을
+만날 때, 어떤 태도로 어떤 방향을 바라봐야 할지 힌트를 얻을 수 있다.
 
-24년 1월부터 읽기 시작했던 책을 인제야 다 읽었다. 그간 게으름을 얼마나 부렸는지 길지 않은 책인데도 반년을 붙잡고 있었다. 사실 개발 교양이라 생각해서 주말에만 읽고 평일에는 다른 CS 책을 읽고 있었다. 뭐 중간에 CS 책 읽는 건 멈추고 토이 프로젝트를 해보겠다고 다짐해서 독서를 좀 소홀히 했는데 토이 프로젝트는 진행도 못 했고, 책만 반년 동안 읽은 모양새가 돼버렸다. (이 얼마나 멍청한 결심과 결과인가!)
+책의 내용은 연결되어 있지 않아서 부분별 "상황" 부분만 살펴본 다음에 자기에게 가장 적당한 주제를 골라
+읽으면 된다. 책에서는 이 주제를 "패턴"이라고 부른다. 그리고 매번 패턴의 끝에는 연관된 다른 패턴을
+리스트로 보여준다. 따라서 관련한 패턴을 더 알고 싶다면 바로 그 패턴으로 이동해 내용을 살펴볼 수 있다.
+
+24년 1월부터 읽기 시작했던 책을 인제야 다 읽었다. 그간 게으름을 얼마나 부렸는지 길지 않은 책인데도
+반년을 붙잡고 있었다. 사실 개발 교양이라 생각해서 주말에만 읽고 평일에는 다른 CS 책을 읽고 있었다. 뭐
+중간에 CS 책 읽는 건 멈추고 토이 프로젝트를 해보겠다고 다짐해서 독서를 좀 소홀히 했는데 토이 프로젝트는
+진행도 못 했고, 책만 반년 동안 읽은 모양새가 돼버렸다. (이 얼마나 멍청한 결심과 결과인가!)
 
 책을 펴보면 초반부에 아래와 같은 문장이 나타난다.
 
-> 합기도를 마스터하려면 얼마나 걸리나요? 수련 지망생이 묻는다. 여기에 대한 훌륭한 대답은 이것뿐이다. 자네 얼마나 오래 살 것 같나? - 조지 레너드 
+> 합기도를 마스터하려면 얼마나 걸리나요? 수련 지망생이 묻는다. 여기에 대한 훌륭한 대답은 이것뿐이다.
+> 자네 얼마나 오래 살 것 같나? - 조지 레너드
 
-모든 직업을 관통하는 중요한 문장이다. 내가 원하는 분야에서 얼마를 수련해야 그 분야의 장인이 될 수 있을까? 정답은 평생이다. 특히나 개개인의 실력 차가 뚜렷한 소프트웨어 업계에 이제 막 뛰어든 수습 뉴비들에게 선배들이 하는 조언을 들어볼 수 있는 책이다.
+모든 직업을 관통하는 중요한 문장이다. 내가 원하는 분야에서 얼마를 수련해야 그 분야의 장인이 될 수
+있을까? 정답은 평생이다. 특히나 개개인의 실력 차가 뚜렷한 소프트웨어 업계에 이제 막 뛰어든 수습
+뉴비들에게 선배들이 하는 조언을 들어볼 수 있는 책이다.
 
-패턴 중 **배운 것을 기록하라 패턴**은 많은 공감이 되었다. 내가 언제 무엇을 공부했으며, 일정 시간이 지났을 때 내가 학습한 내용을 잘 기억하는지, 현재 잘 사용하고 있는지 등등 자기를 되돌아보게 된다. 혹시라도 이 글을 읽으시는 분들(그런 시간 많은 분들이 있을 거로 생각하진 않지만) 중 학습 일기를 쓰지 않고 있다면 꼭 한번 TIL, WIL을 작성해 보시길 추천한다. 
+패턴 중 **배운 것을 기록하라 패턴**은 많은 공감이 되었다. 내가 언제 무엇을 공부했으며, 일정 시간이
+지났을 때 내가 학습한 내용을 잘 기억하는지, 현재 잘 사용하고 있는지 등등 자기를 되돌아보게 된다.
+혹시라도 이 글을 읽으시는 분들(그런 시간 많은 분들이 있을 거로 생각하진 않지만) 중 학습 일기를 쓰지
+않고 있다면 꼭 한번 TIL, WIL을 작성해 보시길 추천한다.
 
-읽으면서 정말정말 내가 부족하다고 생각한 패턴은 **부숴도 괜찮은 장난감 패턴**이다. 회사에 지쳐 집에 와 아무것도 안 하는 나를 발견할 때가 많다. 뭐든 만들어보겠다고, 의지를 돈으로 산다며 구매한 엄청 비싼 맥북이 몇 달간 인테리어로 쓰이고 있다. 이럴 거면 그 돈으로 뭐라도 사 입던가, 사 먹던가,,, 미련한 선택에는 일가견이 있는 모습이 어려서부터 똑같다.... 🪿서평을 완성하고 있는 9월 시점(글 쓰기는 늦봄에 시작했다)에서는 해당 맥북으로 뭐든 만들고는 있는 중이다. 🐷
+읽으면서 정말정말 내가 부족하다고 생각한 패턴은 **부숴도 괜찮은 장난감 패턴**이다. 회사에 지쳐 집에 와
+아무것도 안 하는 나를 발견할 때가 많다. 뭐든 만들어보겠다고, 의지를 돈으로 산다며 구매한 엄청 비싼
+맥북이 몇 달간 인테리어로 쓰이고 있다. 이럴 거면 그 돈으로 뭐라도 사 입던가, 사 먹던가,,, 미련한
+선택에는 일가견이 있는 모습이 어려서부터 똑같다.... 🪿서평을 완성하고 있는 9월 시점(글 쓰기는 늦봄에
+시작했다)에서는 해당 맥북으로 뭐든 만들고는 있는 중이다. 🐷
 
-또 다른 패턴으로 **피드백 루프를 만들어라** 패턴이 생각난다. 해당 패턴을 읽을 때 다른 책, "함께 자라기"가 연상되었기 때문이다. 거기에서 본 내용과 비슷한 패턴들이 많이 나온다. 한 분야의 전문가가 되기 위해서 중요한 몇 가지를 꼽아보자면 의도적 수련과 피드백이라고 말할 수 있다. 두 책 모두 이 사항에 대해 엄청 중요하게 설명한다. 
+또 다른 패턴으로 **피드백 루프를 만들어라** 패턴이 생각난다. 해당 패턴을 읽을 때 다른 책, "함께
+자라기"가 연상되었기 때문이다. 거기에서 본 내용과 비슷한 패턴들이 많이 나온다. 한 분야의 전문가가 되기
+위해서 중요한 몇 가지를 꼽아보자면 의도적 수련과 피드백이라고 말할 수 있다. 두 책 모두 이 사항에 대해
+엄청 중요하게 설명한다.
 
-"함께 자라기"에서의 내용을 빌려오자면 다음과 같다. 우리는 대충 30년 동안이나 양치질을 했다. 1만 시간의 법칙에 따르면 벌써 이 닦기의 고수가 되고도 남는 시간이다. 그런데 우리는 치과의사 뺨칠 만큼 이를 잘 닦는가? 여기서 화자의 논리가 전개된다. 단순 반복을 오랜 시간 하는 수준으로는 자신의 실력을 향상할 수 없다. 필요한 요소는 의도적 수련과 피드백이다.
+"함께 자라기"에서의 내용을 빌려오자면 다음과 같다. 우리는 대충 30년 동안이나 양치질을 했다. 1만
+시간의 법칙에 따르면 벌써 이 닦기의 고수가 되고도 남는 시간이다. 그런데 우리는 치과의사 뺨칠 만큼 이를
+잘 닦는가? 여기서 화자의 논리가 전개된다. 단순 반복을 오랜 시간 하는 수준으로는 자신의 실력을 향상할 수
+없다. 필요한 요소는 의도적 수련과 피드백이다.
 
-이와 같은 내용이 이 책에서도 소개되어 있다. 그저 자신이 속한 공방(회사를 의미) 장인(상급자를 의미)의 작품(코드)을 따라 만들며(코딩하며) 아무 고민 없이 카피캣이 된 나는 30년이 지나도 1년 차 경험을 30번 한 개발자가 될 뿐이다. 절대 30년 차 개발자가 될 수 없다. 이를 해결하기 위해서는 의도적 수련과 피드백이 필요하다. 
+이와 같은 내용이 이 책에서도 소개되어 있다. 그저 자신이 속한 공방(회사를 의미) 장인(상급자를 의미)의
+작품(코드)을 따라 만들며(코딩하며) 아무 고민 없이 카피캣이 된 나는 30년이 지나도 1년 차 경험을
+30번 한 개발자가 될 뿐이다. 절대 30년 차 개발자가 될 수 없다. 이를 해결하기 위해서는 의도적 수련과
+피드백이 필요하다.
 
-외국 서적이기도 하고 연식이 조금은 있는 책이다 보니 20년대 대한민국, 사회 초년생에게 1대 1로 딱 맞는 상황이 많지는 않았다. 부분 부분에서 해당 내용을 다르게 적용할 수 있지 않을까 고민하며 읽는 방법도 괜찮을 거로 생각한다.
+외국 서적이기도 하고 연식이 조금은 있는 책이다 보니 20년대 대한민국, 사회 초년생에게 1대 1로 딱 맞는
+상황이 많지는 않았다. 부분 부분에서 해당 내용을 다르게 적용할 수 있지 않을까 고민하며 읽는 방법도 괜찮을
+거로 생각한다.
 
 ## 기타
-서평을 써야지,,, 써야지 하루하루 미루다가 너무 멀리 건너와 버렸다. 이 글을 쓸 때까지만 해도 나는 직장인이었지만 지금은 다시 취준생의 신분으로 돌아왔다. 
+
+서평을 써야지,,, 써야지 하루하루 미루다가 너무 멀리 건너와 버렸다. 이 글을 쓸 때까지만 해도 나는
+직장인이었지만 지금은 다시 취준생의 신분으로 돌아왔다. 
