--- a/독서/1. 서평/03. 함께 자라기 를 읽고 📝.md
+++ b/독서/1. 서평/03. 함께 자라기 를 읽고 📝.md
@@ -1,43 +1,67 @@
+작년(23년)에 한 번 읽었었는데 좋은 책이라 한 번 더 읽었다. 읽기는 진작 다 읽었지만 게으름에 하루하루
+미루다 보니 몇 달을 미루게 됐다. 해가 넘어가기 전에는 그래도 서평을 써야 하지 않을까... 맘 잡고 딱
+앉아서 서평을 써봤다. 🧑‍💻
 
-작년(23년)에 한 번 읽었었는데 좋은 책이라 한 번 더 읽었다. 읽기는 진작 다 읽었지만 게으름에 하루하루 미루다 보니 몇 달을 미루게 됐다. 해가 넘어가기 전에는 그래도 서평을 써야 하지 않을까... 맘 잡고 딱 앉아서 서평을 써봤다. 🧑‍💻
+맨 처음 읽게 된 계기는 별거 없다. 취준하던 때에, 개발자들 토크쇼를 자주 봤었다. 거기서 주니어든,
+시니어든 구분하지 않고 꼭 읽어봐야 한다고 말하던 분이 있어서 나도 흥미가 생겨서 읽어봤다.
 
-맨 처음 읽게 된 계기는 별거 없다. 취준하던 때에, 개발자들 토크쇼를 자주 봤었다. 거기서 주니어든, 시니어든 구분하지 않고 꼭 읽어봐야 한다고 말하던 분이 있어서 나도 흥미가 생겨서 읽어봤다.
+개발자들이 환장하는 키워드를 몇 가지를 뽑아보자면, 성장, 성장, 성장 등을 이야기할 수 있겠다.
+제목에서부터 "어떻게 성장할지를 보여주마!"라고 강력하게 어필하는 책인데 내용이 궁금할 수밖에 없지
+않겠는가? 그래서 읽었다.
 
-개발자들이 환장하는 키워드를 몇 가지를 뽑아보자면, 성장, 성장, 성장 등을 이야기할 수 있겠다. 제목에서부터 "어떻게 성장할지를 보여주마!"라고 강력하게 어필하는 책인데 내용이 궁금할 수밖에 없지 않겠는가? 그래서 읽었다.
+그런데 이번에 또 읽은 이유는 내가 원한 개발자와 회사에서 바라는 개발자의 괴리를 조정하는 중 어떻게 성장해
+가야 할지 도움이 필요했기 때문이다. 지금은 퇴사했지만, 하여튼 다시 읽을 때는 도움이 필요했다.
 
-그런데 이번에 또 읽은 이유는 내가 원한 개발자와 회사에서 바라는 개발자의 괴리를 조정하는 중 어떻게 성장해 가야 할지 도움이 필요했기 때문이다. 지금은 퇴사했지만, 하여튼 다시 읽을 때는 도움이 필요했다.
-
-책은 3단원으로 이루어진다. 자라기, 함께, 애자일. 
+책은 3단원으로 이루어진다. 자라기, 함께, 애자일.
 
 **자라기**
-"자라기" 부분에서는 실력에 대한 사람들의 고정관념을 이야기하며 정말 성장하기 위해 뭘 해야 하는지 이야기한다. 예시를 들어보자. 막연히 사람들은 1년차보다 10년차 개발자가 더 일을 잘 하겠거니 생각한다. 그런데 정말 그럴까? 치대생보다 10년은 더 살아온 내가 그 치대생보다 이를 더 잘 닦을까? 이 예시를 생각해봤을 때 1년차 개발자가 10년차 개발자보다 더 일을 잘 할수도 있다. 그러면 뭘 기준으로 실력을 판가름해야할까? 그리고 무엇보다 뭘 해야 실력을 길러 성장할 수 있을까? 관련 내용을 여기서 이야기한다.
+"자라기" 부분에서는 실력에 대한 사람들의 고정관념을 이야기하며 정말 성장하기 위해 뭘 해야 하는지
+이야기한다. 예시를 들어보자. 막연히 사람들은 1년차보다 10년차 개발자가 더 일을 잘 하겠거니 생각한다.
+그런데 정말 그럴까? 치대생보다 10년은 더 살아온 내가 그 치대생보다 이를 더 잘 닦을까? 이 예시를
+생각해봤을 때 1년차 개발자가 10년차 개발자보다 더 일을 잘 할수도 있다. 그러면 뭘 기준으로 실력을
+판가름해야할까? 그리고 무엇보다 뭘 해야 실력을 길러 성장할 수 있을까? 관련 내용을 여기서 이야기한다.
 
 **함께**
-"함께" 부분에서는 동료들과 협업하는 방법, 대화하는 방법, 혼자가 아니라 팀 단위로 성장하는 방법 등을 소개한다. 팀 단위 성장을 위해 필요한 것이 무엇일까? 팀원들 간의 신뢰이다. 그렇다면 신뢰를 쌓기 위해 무엇을 해야할까? 이 중요한 신뢰를 쌓기 위한 방법들을 소개하는 단원이다. 
+"함께" 부분에서는 동료들과 협업하는 방법, 대화하는 방법, 혼자가 아니라 팀 단위로 성장하는 방법 등을
+소개한다. 팀 단위 성장을 위해 필요한 것이 무엇일까? 팀원들 간의 신뢰이다. 그렇다면 신뢰를 쌓기 위해
+무엇을 해야할까? 이 중요한 신뢰를 쌓기 위한 방법들을 소개하는 단원이다.
 
 **애자일**
-마지막 "애자일" 단원에서는 말 그대로 애자일을 소개한다. 애자일 방법론을 사용해야 하는 당위, 소개, 접근 방법 등을 소개한다. 마지막 단원인 이 부분이 중요하다. 애자일을 이야기하기 위해서 이전의 2단원을 이야기했기 때문이다. 이 책의 논점을 정리해보자면 아래와 같다.
+마지막 "애자일" 단원에서는 말 그대로 애자일을 소개한다. 애자일 방법론을 사용해야 하는 당위, 소개, 접근
+방법 등을 소개한다. 마지막 단원인 이 부분이 중요하다. 애자일을 이야기하기 위해서 이전의 2단원을
+이야기했기 때문이다. 이 책의 논점을 정리해보자면 아래와 같다.
 
-Q. 애자일을 도입해야 하는 이유가 무엇인가? 
+Q. 애자일을 도입해야 하는 이유가 무엇인가?
 A. 변화하는 시장, 상황에 대응하기 위해서이다.
 
-Q. 근데 왜 애자일인가? 
-A. 기존의 방법론들은 한계가 있기 때문이다. 
+Q. 근데 왜 애자일인가?
+A. 기존의 방법론들은 한계가 있기 때문이다.
 
-Q. 그렇다면 어떻게 애자일을 도입할 수 있는가? 
-A. 자기 자신의 성장, 동료들과의 원활한 의사소통, 팀단위 성장이 이루어져야한다. 
+Q. 그렇다면 어떻게 애자일을 도입할 수 있는가?
+A. 자기 자신의 성장, 동료들과의 원활한 의사소통, 팀단위 성장이 이루어져야한다.
 
-위의 논리를 거꾸로 올라가서 애자일을 소개한다. 
+위의 논리를 거꾸로 올라가서 애자일을 소개한다.
 
-일 하기 전 내가 원하던 개발자와 일을 시작한 후 내가 하고 있는 개발자의 괴리에서 힘든 시간을 잠깐 보냈다. 백수였을 때에는 이 책을 읽으면서 '동료들과 원활하게 잘 지내고, 공부도 열심히 하면서 팀 단위 성장을 해보이겠다. 애자일도 해보면 좋겠다!' 같은 두루뭉실한 욕구가 있었다. 
+일 하기 전 내가 원하던 개발자와 일을 시작한 후 내가 하고 있는 개발자의 괴리에서 힘든 시간을 잠깐
+보냈다. 백수였을 때에는 이 책을 읽으면서 '동료들과 원활하게 잘 지내고, 공부도 열심히 하면서 팀 단위
+성장을 해보이겠다. 애자일도 해보면 좋겠다!' 같은 두루뭉실한 욕구가 있었다.
 
-막상 일을 하게 되면서 일정에 치이고, 의견 조율 등으로 옆사람들과 이야기를 하다보면 그들에게 친절한 모습만 보여주기 어려울 때가 있었다. 그냥 하다보면 될줄 알았는데... 자연스럽게 그렇게 되겠거니 생각했었는데 기대와 현실은 많이 달랐었다. 맞다. 뭘 모르는 초짜들이 흔히 갖는 그런 막연한 희망 같은 것이 있었다.
+막상 일을 하게 되면서 일정에 치이고, 의견 조율 등으로 옆사람들과 이야기를 하다보면 그들에게 친절한 모습만
+보여주기 어려울 때가 있었다. 그냥 하다보면 될줄 알았는데... 자연스럽게 그렇게 되겠거니 생각했었는데
+기대와 현실은 많이 달랐었다. 맞다. 뭘 모르는 초짜들이 흔히 갖는 그런 막연한 희망 같은 것이 있었다.
 
-그래서 뭐가 바뀌었냐고? 막연한 기대로 되겠거니 기대만 하지 않고 다음 회사에서는 기대를 위해 노력을 해볼 생각이다. 원활한 관계, 원활한 의사소통, 팀단위 성장 다 좋다. 그리고 이를 위해 노력할 항목이라 하면 단 하나이다. 간단하다. 
+그래서 뭐가 바뀌었냐고? 막연한 기대로 되겠거니 기대만 하지 않고 다음 회사에서는 기대를 위해 노력을 해볼
+생각이다. 원활한 관계, 원활한 의사소통, 팀단위 성장 다 좋다. 그리고 이를 위해 노력할 항목이라 하면 단
+하나이다. 간단하다.
 
 > "굳이 친절한 사람이 되기"
 
 ## 기타
-내용을 보면 주니어는 그래 읽을만 하다고 칩시다. 그런데 시니어에게 도움이 될만한 부분은 없는거 같은데요? 라는 질문이 나온다면...
 
-함께와 애자일 부분에서 팀원들과 대화하는 예시등을 이야기하며 팀장의 역할을 아주 상세히 이야기합니다. 팀 프로젝트가 성공하기 위해서 팀장이 할 수 있는 일들에 대해서도 소개하고 있습니다. 실수는 AND조건, 경험은 OR 조건 등등 팀 성장을 위해 팀장이 뭘 해야하는지 자세히 소개하고 있기 때문에 시니어 분들도 읽어보시길 추천드립니다.
+내용을 보면 주니어는 그래 읽을만 하다고 칩시다. 그런데 시니어에게 도움이 될만한 부분은 없는거 같은데요?
+라는 질문이 나온다면...
+
+함께와 애자일 부분에서 팀원들과 대화하는 예시등을 이야기하며 팀장의 역할을 아주 상세히 이야기합니다. 팀
+프로젝트가 성공하기 위해서 팀장이 할 수 있는 일들에 대해서도 소개하고 있습니다. 실수는 AND조건, 경험은
+OR 조건 등등 팀 성장을 위해 팀장이 뭘 해야하는지 자세히 소개하고 있기 때문에 시니어 분들도 읽어보시길
+추천드립니다.
