--- a/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/04. CPU의 작동 원리/04-0. CPU의 작동 원리.md
+++ b/독서/2. 혼자 공부하는 컴퓨터 구조 + 운영체제/04. CPU의 작동 원리/04-0. CPU의 작동 원리.md
@@ -1,5 +1,5 @@
-[[04-1. ALU와 제어장치]]
-[[04-2. 레지스터]]
-[[04-3. 명령어 사이클과 인터럽트-1]]
-[[04-4 명령어 사이클과 인터럽트-2]]
-[[04-5. 예외의 종류]]
+[04-1. ALU와 제어장치](04-1.%20ALU와%20제어장치.md)  
+[04-2. 레지스터](04-2.%20레지스터.md)  
+[04-3. 명령어 사이클과 인터럽트-1](04-3.%20명령어%20사이클과%20인터럽트-1.md)  
+[04-4 명령어 사이클과 인터럽트-2](04-4%20명령어%20사이클과%20인터럽트-2.md)  
+[04-5. 예외의 종류](04-5.%20예외의%20종류.md)
