--- a/독서/3. 모던 자바스크립트 deep dive/00. 목차.md
+++ b/독서/3. 모던 자바스크립트 deep dive/00. 목차.md
@@ -1,9 +1,9 @@
-[[01-0. 프로그래밍]]
-[[02-0. 자바스크립트란]]
-[[03-0. 자바스크립트 개발 환경과 실행 방법]]
-[[04-0. 변수]]
-[[05-0. 표현식과 문]]
-[[06-0. 데이터 타입]]
-[[07-0. 연산자]]
+[01-0. 프로그래밍](01.%20프로그래밍/01-0.%20프로그래밍.md)  
+[02-0. 자바스크립트란](02.%20자바스크립트란/02-0.%20자바스크립트란.md)  
+[03-0. 자바스크립트 개발 환경과 실행 방법](03.%20자바스크립트%20개발%20환경과%20실행%20방법/03-0.%20자바스크립트%20개발%20환경과%20실행%20방법.md)  
+[04-0. 변수](04.%20변수/04-0.%20변수.md)  
+[05-0. 표현식과 문](05.%20표현식과%20문/05-0.%20표현식과%20문.md)  
+[06-0. 데이터 타입](06.%20데이터%20타입/06-0.%20데이터%20타입.md)  
+[07-0. 연산자](07.%20연산자/07-0.%20연산자.md)  
 
-[[42-0. 비동기 프로그래밍]]
+[42-0. 비동기 프로그래밍](42.%20비동기%20프로그래밍/42-0.%20비동기%20프로그래밍.md)
