--- a/독서/5. 한 권으로 읽는 컴퓨터 구조와 프로그래밍/01. 컴퓨터 내부의 언어 체계/01-0. 컴퓨터 내부의 언어 체계.md
+++ b/독서/5. 한 권으로 읽는 컴퓨터 구조와 프로그래밍/01. 컴퓨터 내부의 언어 체계/01-0. 컴퓨터 내부의 언어 체계.md
@@ -1,18 +1,18 @@
-[[01-1. 언어란 무엇인가]]
-[[01-2. 문자 언어]]
-[[01-3. 비트]]
-[[01-4. 논리 연산 - 1]]
-[[01-5. 논리 연산 - 2]]
-[[01-6. 정수를 비트로 표현하는 방법 - 1]]
-[[01-7. 정수를 비트로 표현하는 방법 - 2]]
-[[01-8. 정수를 비트로 표현하는 방법 - 3]]
-[[01-9. 정수를 비트로 표현하는 방법 - 4]]
-[[01-10. 정수를 비트로 표현하는 방법 - 5]]
-[[01-11. 실수를 표현하는 방법 - 1]]
-[[01-12. 실수를 표현하는 방법 - 2]]
-[[01-13. 실수를 표현하는 방법 - 3]]
-[[01-14. 2진 코드화한 10진수 시스템]]
-[[01-15. 2진수를 다루는 쉬운 방법 - 1]]
-[[01-16. 2진수를 다루는 쉬운 방법 - 2]]
-[[01-17.  2진수를 다루는 쉬운 방법 - 3]]
-[[01-18. 비트 그룹의 이름]]
+[01-1. 언어란 무엇인가](01-1.%20언어란%20무엇인가.md)  
+[01-2. 문자 언어](01-2.%20문자%20언어.md)  
+[01-3. 비트](01-3.%20비트.md)  
+[01-4. 논리 연산 - 1](01-4.%20논리%20연산%20-%201.md)  
+[01-5. 논리 연산 - 2](01-5.%20논리%20연산%20-%202.md)  
+[01-6. 정수를 비트로 표현하는 방법 - 1](01-6.%20정수를%20비트로%20표현하는%20방법%20-%201.md)  
+[01-7. 정수를 비트로 표현하는 방법 - 2](01-7.%20정수를%20비트로%20표현하는%20방법%20-%202.md)  
+[01-8. 정수를 비트로 표현하는 방법 - 3](01-8.%20정수를%20비트로%20표현하는%20방법%20-%203.md)  
+[01-9. 정수를 비트로 표현하는 방법 - 4](01-9.%20정수를%20비트로%20표현하는%20방법%20-%204.md)  
+[01-10. 정수를 비트로 표현하는 방법 - 5](01-10.%20정수를%20비트로%20표현하는%20방법%20-%205.md)  
+[01-11. 실수를 표현하는 방법 - 1](01-11.%20실수를%20표현하는%20방법%20-%201.md)  
+[01-12. 실수를 표현하는 방법 - 2](01-12.%20실수를%20표현하는%20방법%20-%202.md)  
+[01-13. 실수를 표현하는 방법 - 3](01-13.%20실수를%20표현하는%20방법%20-%203.md)  
+[01-14. 2진 코드화한 10진수 시스템](01-14.%202진%20코드화한%2010진수%20시스템.md)  
+[01-15. 2진수를 다루는 쉬운 방법 - 1](01-15.%202진수를%20다루는%20쉬운%20방법%20-%201.md)  
+[01-16. 2진수를 다루는 쉬운 방법 - 2](01-16.%202진수를%20다루는%20쉬운%20방법%20-%202.md)  
+[01-17.  2진수를 다루는 쉬운 방법 - 3](01-17.%20%202진수를%20다루는%20쉬운%20방법%20-%203.md)  
+[01-18. 비트 그룹의 이름](01-18.%20비트%20그룹의%20이름.md)  
